--- a/A/Altice/AlticeAugustCreative/ads/OPT_Movers/160x600/160x600_frame2.html
+++ b/A/Altice/AlticeAugustCreative/ads/OPT_Movers/160x600/160x600_frame2.html
@@ -7,28 +7,6 @@
     <link rel="stylesheet" href="https://assets.everesttech.net/static/css/style.min.css">
     <script type="text/javascript" src="https://ads.everesttech.net/ads/static/local/AMOLibrary.js"></script>
     <script src="https://assets.everesttech.net/static/js/script.min.js" charset="utf-8"></script>
-    <script type="text/javascript">
-      amo.registerAttribute("frameImage1", "IMAGE", "assets/OPT_AO_64/160x600_OPT_Movers_April_IntroImage_Frame_01.png");
-      amo.registerAttribute("frameText1", "TEXT", "Every move should<br>include great style.");
-      amo.registerAttribute("frameImage2", "IMAGE", "assets/OPT_AO_64/160x600_OPT_Movers_April_ProductImage_Frame_02.png");
-      amo.registerAttribute("frameText21", "TEXT", "<div style='top: 55px;left: 15px;line-height:1.1;'><div style='font-size: 24px;letter-spacing: -0.2px;'>Move with Altice One</div><div style='font-size: 24px;color: #0084d6;width: 144px;letter-spacing:-0.4px;line-height:1;'>Our Lowest 2-Year Offer</div></div>");//<div style='top:56px;left:16px;font-size:22px;width:130px;line-height:1.1;letter-spacing:-0.1px;'>You'll want to keep this.</div>
-      amo.registerAttribute("frameText22", "TEXT", "<div style='top: 164px;left: 16px;font-size:16px;letter-spacing:-0.1px;'><div style='color:#0084d6;font-size: 20px;'><span>$74.99<sub style='font-size: 8px;vertical-align: 3%;margin-left: 1px;'>mo.</sub></span><div style='border-top: 1px solid;width: 69px;position: absolute;top: 12px;left: -2px;transform: rotate(-10deg);'></div></div><div style='color: #0084d6;font-size: 32px;margin-top: -7px;margin-left: -2px;'><span>$64.99</span></div><div class='AlticeRegular' style='font-size:10px;margin-left: -2px;margin-top: -3px;letter-spacing: 0px;line-height: 1.1;'><font class='AlticeBold'>Save $10 a month in year 1</font><br>plus taxes, fees &amp; charges</div></div>");
-      amo.registerAttribute("frameText23", "TEXT", "&nbsp;");
-      amo.registerAttribute("frameImage3", "IMAGE", "assets/OPT_AO_64/160x600_OPT_Movers_April_ProductImage_Frame_03.png");
-      amo.registerAttribute("frameText31", "TEXT", "<div style='top: 38px;left: 14px;line-height: 1.6;font-size: 16px;letter-spacing: -2px;'><div style='color: #0084d6;font-size: 52px;'><sup style='font-size:60%;vertical-align: 31%;margin-right: -1px;'>$</sup>200</div></div>");
-      amo.registerAttribute("frameText32", "TEXT", "<div style='top: 103px;left: 16px;line-height: 1.1;font-size: 22px;'>Amazon.com<br>Gift Card.</div>");
-      amo.registerAttribute("frameText33", "TEXT", "<div class='AlticeRegular' style='top:154px;left: 15px;line-height: 1.2;letter-spacing: -0.3px;font-size: 10px;'>Restrictions apply, see<br>amazon.com/gc-legal</div>");
-      amo.registerAttribute("frameImage4", "IMAGE", "assets/OPT_AO_64/160x600_OPT_Movers_April_ProductImage_Frame_04.png");
-      amo.registerAttribute("frameText41", "TEXT", "<div style='top: 18px;left: 14px;line-height: 1.4;font-size: 16px;'><div><span style='color:#0084d6;padding-right:2px;'>+</span>Up to 200 Mbps<div style='margin-left: 12px;margin-top: -2px;'>Internet</div></div><div><span style='color:#0084d6;padding-right:2px;'>+</span>220 TV Channels</div></div>");
-      amo.registerAttribute("frameText42", "TEXT", "<div style='top: 84px;left: 14px;line-height: 1.4;font-size: 16px;'><div><span style='color:#0084d6;padding-right:2px;'>+</span>40% Better WiFi</div></div>");
-      amo.registerAttribute("frameText43", "TEXT", "<div style='top: 107px;left: 14px;line-height: 1.4;font-size: 16px;'><div><span style='color:#0084d6;padding-right:2px;'>+</span>Voice Activated<div style='margin-top: -2px;margin-left: 12px;'>Remote</div></div><div><span style='color:#0084d6;padding-right:2px;'>+</span>4K Ultra HD</div><div style='position: absolute;top: 120px;left: 0px;font-size: 9.5px;line-height: 1;' class='AlticeRegular'>Wired connection.<br>WiFi speeds may vary.</div></div>");
-      amo.registerAttribute("frameImage5", "IMAGE", "assets/OPT_AO_64/160x600_OPT_Movers_April_ProductImage_Frame_05.png");
-      amo.registerAttribute("frameText51", "TEXT", "<div style='top: 54px;left:15px;line-height:1.1;'><div style='font-size: 24px;letter-spacing: -0.2px;'>Altice One</div><div style='font-size: 24px;color: #0084d6;letter-spacing: -0.1px;'>Our Lowest Price Ever!</div></div>");
-      amo.registerAttribute("frameText52", "TEXT", "<div style='top: 135px;left: 15px;line-height:1.1;'><div style='color: #0084d6;font-size: 54px;'><sup style='font-size:60%;vertical-align: 45%;margin-right: -2px;'>$</sup>64<sup style='font-size:60%;vertical-align: 45%;margin-left: -2px;'>99</sup></div><div style='font-size: 14px;letter-spacing:-0.1px;margin-top: -5px;'>mo./1st yr.<div class='AlticeRegular' style='font-size: 10px;margin-top: 1px;'>plus taxes, fees &amp; charges</div></div></div>");
-      amo.registerAttribute("frameText53", "TEXT", "<div style='top: 247px;left:15px;line-height: 1.2;font-size:12px;letter-spacing:-0.1px;'><div>$200 Amazon.com<br>Gift Card. <span class='AlticeRegular' style='font-size: 70%;'>Restrictions apply.</span></div></div>");
-      amo.registerAttribute("ctaText", "TEXT", "Learn more");
-      amo.registerClick("clickUrl", "https://adobe.com/#Altice");
-    </script>
     <script type="text/javascript">var addTypingContent=function(d){if(d){var a=d.innerHTML;a&&a.length&&(a=a.split("&amp;").join("&").split("&lt;").join("<").split("&gt;").join(">"));var b=a.match(/<.*?>/g);b=b&&b.length?b:[];a=a.split(/<.*?>/g);a=a.map(function(a){return a.split("").map(function(a){return'<type class="transparent">'+a+"</type>"}).join("")});var c=b;a.length<c&&(b=a,a=c,c=b);c.push("");d.innerHTML=a.map(function(a,b){return a+c[b]}).join("")}};</script>
     <style media="screen">
       @font-face {
@@ -90,7 +68,7 @@
       #cta:hover { background-color: !{ctaBtnHover}; }
     </style>
   <!-- Start of overrode asset attributes values -->
-<script type="text/javascript"> 
+<script type="text/javascript">
 amo.registerClick("clickUrl","https://www.optimum.com?s_cid=MovJulyAO64-_-d&utm_source=programmatic&utm_medium=display&utm_campaign=acqbanner");
 amo.registerAttribute("ctaText","TEXT","Learn more");
 amo.registerAttribute("frameImage1","IMAGE","160x600_OPT_Movers_April_IntroImage_Frame_01.png");
@@ -99,18 +77,18 @@ amo.registerAttribute("frameImage3","IMAGE","160x600_OPT_Movers_April_ProductIma
 amo.registerAttribute("frameImage4","IMAGE","160x600_OPT_Movers_April_ProductImage_Frame_04.png");
 amo.registerAttribute("frameImage5","IMAGE","160x600_OPT_Movers_April_ProductImage_Frame_05.png");
 amo.registerAttribute("frameText1","TEXT","Every move should<br>include great style.");
-amo.registerAttribute("frameText21","TEXT","<div style='top: 55px;left: 15px;line-height:1.1;'><div style='font-size: 24px;letter-spacing: -0.2px;'>Move with Altice One</div><div style='font-size: 24px;color: #0084d6;width: 144px;letter-spacing:-0.4px;line-height:1;'>Our Lowest 2-Year Offer</div></div>");
-amo.registerAttribute("frameText22","TEXT","<div style='top: 164px;left: 16px;font-size:16px;letter-spacing:-0.1px;'><div style='color:#0084d6;font-size: 20px;'><span>$74.99<sub style='font-size: 8px;vertical-align: 3%;margin-left: 1px;'>mo.</sub></span><div style='border-top: 1px solid;width: 69px;position: absolute;top: 12px;left: -2px;transform: rotate(-10deg);'></div></div><div style='color: #0084d6;font-size: 32px;margin-top: -7px;margin-left: -2px;'><span>$64.99</span></div><div class='AlticeRegular' style='font-size:10px;margin-left: -2px;margin-top: -3px;letter-spacing: 0px;line-height: 1.1;'><font class='AlticeBold'>Save $10 a month in year 1</font><br>plus taxes, fees &amp; charges</div></div>");
+amo.registerAttribute("frameText21","TEXT","<div style='top: 55px;left: 15px;line-height:1.1;'><div style='font-size: 24px;letter-spacing: -0.2px;'>Moving?</div><div style='font-size: 24px;color: #0084d6;width: 144px;letter-spacing:-0.4px;line-height:1;'>Get Altice One + Internet</div></div>");
+amo.registerAttribute("frameText22","TEXT","<div style='top: 152px;left: 16px;line-height:1.1;'><div style='color: #0084d6;font-size: 62px;'><sup style='font-size: 49%;vertical-align: 63%;margin-right: -1px;'>$</sup>64<sup style='font-size: 49%;vertical-align: 67%;margin-left: 2px;'>99</sup></div><div style='font-size: 14px;letter-spacing: -0.3px;margin-top: -9px;'>mo. <font style='color:#0084d6;'>for life</font><div class='AlticeRegular' style='font-size: 10px;margin-top: 1px;letter-spacing: -0.1px;'>Plus taxes, fees &amp; charges</div></div></div>");
 amo.registerAttribute("frameText23","TEXT","&nbsp;");
-amo.registerAttribute("frameText31","TEXT","<div style='top: 38px;left: 14px;line-height: 1.6;font-size: 16px;letter-spacing: -2px;'><div style='color: #0084d6;font-size: 52px;'><sup style='font-size:60%;vertical-align: 31%;margin-right: -1px;'>$</sup>200</div></div>");
+amo.registerAttribute("frameText31","TEXT","<div style='top: 38px;left: 14px;line-height: 1.6;font-size: 16px;letter-spacing: -2px;'><div style='color: #0084d6;font-size: 52px;'><sup style='font-size:60%;vertical-align: 31%;margin-right: -1px;'>$</sup>100</div></div>");
 amo.registerAttribute("frameText32","TEXT","<div style='top: 103px;left: 16px;line-height: 1.1;font-size: 22px;'>Amazon.com<br>Gift Card.</div>");
 amo.registerAttribute("frameText33","TEXT","<div class='AlticeRegular' style='top:154px;left: 15px;line-height: 1.2;letter-spacing: -0.3px;font-size: 10px;'>Restrictions apply, see<br>amazon.com/gc-legal</div>");
 amo.registerAttribute("frameText41","TEXT","<div style='top: 18px;left: 14px;line-height: 1.4;font-size: 16px;'><div><span style='color:#0084d6;padding-right:2px;'>+</span>Up to 200 Mbps<div style='margin-left: 12px;margin-top: -2px;'>Internet</div></div><div><span style='color:#0084d6;padding-right:2px;'>+</span>220 TV Channels</div></div>");
 amo.registerAttribute("frameText42","TEXT","<div style='top: 84px;left: 14px;line-height: 1.4;font-size: 16px;'><div><span style='color:#0084d6;padding-right:2px;'>+</span>40% Better WiFi</div></div>");
 amo.registerAttribute("frameText43","TEXT","<div style='top: 107px;left: 14px;line-height: 1.4;font-size: 16px;'><div><span style='color:#0084d6;padding-right:2px;'>+</span>Voice Activated<div style='margin-top: -2px;margin-left: 12px;'>Remote</div></div><div><span style='color:#0084d6;padding-right:2px;'>+</span>4K Ultra HD</div><div style='position: absolute;top: 120px;left: 0px;font-size: 9.5px;line-height: 1;' class='AlticeRegular'>Wired connection.<br>WiFi speeds may vary.</div></div>");
-amo.registerAttribute("frameText51","TEXT","<div style='top: 54px;left:15px;line-height:1.1;'><div style='font-size: 24px;letter-spacing: -0.2px;'>Altice One</div><div style='font-size: 24px;color: #0084d6;letter-spacing: -0.1px;'>Our Lowest Price Ever!</div></div>");
-amo.registerAttribute("frameText52","TEXT","<div style='top: 135px;left: 15px;line-height:1.1;'><div style='color: #0084d6;font-size: 54px;'><sup style='font-size:60%;vertical-align: 45%;margin-right: -2px;'>$</sup>64<sup style='font-size:60%;vertical-align: 45%;margin-left: -2px;'>99</sup></div><div style='font-size: 14px;letter-spacing:-0.1px;margin-top: -5px;'>mo./1st yr.<div class='AlticeRegular' style='font-size: 10px;margin-top: 1px;'>plus taxes, fees &amp; charges</div></div></div>");
-amo.registerAttribute("frameText53","TEXT","<div style='top: 247px;left:15px;line-height: 1.2;font-size:12px;letter-spacing:-0.1px;'><div>$200 Amazon.com<br>Gift Card. <span class='AlticeRegular' style='font-size: 70%;'>Restrictions apply.</span></div></div>");
+amo.registerAttribute("frameText51","TEXT","<div style='top: 110px;left:15px;line-height:0.9;'><div style='font-size: 24px;letter-spacing: -0.2px;'>Altice One<br>+ Internet</div></div>");
+amo.registerAttribute("frameText52","TEXT","<div style='top: 152px;left: 16px;line-height:1.1;'><div style='color: #0084d6;font-size: 62px;'><sup style='font-size: 49%;vertical-align: 63%;margin-right: -1px;'>$</sup>64<sup style='font-size: 49%;vertical-align: 67%;margin-left: 2px;'>99</sup></div><div style='font-size: 14px;letter-spacing: -0.3px;margin-top: -9px;'>mo. <font style='color:#0084d6;'>for life</font><div class='AlticeRegular' style='font-size: 10px;margin-top: 1px;letter-spacing: -0.1px;'>Plus taxes, fees &amp; charges</div></div></div>");
+amo.registerAttribute("frameText53","TEXT","<div style='top: 279px;left: 16px;line-height: 1.5;font-size: 14px;letter-spacing:-0.1px;'><div><span style='color:#0084d6;padding-right: 0px;'>+</span>$100 Amazon.com</div><div style='margin-top: -5px;margin-left: 9px;'>Gift Card</div><div style='color:#0084d6;'><span style='color:#0084d6;padding-right:0px;'>+</span>No Annual</div><div style='margin-top: -4px;margin-left: 9px;color: #0084d6;'>Contract</div><div style='position: absolute;top: -20px;left: -1px;width: 128px;border: 1px solid #aaabac;'></div></div>");
 </script>
 <!-- End of overrode asset attributes values -->
 </head>
@@ -149,6 +127,7 @@ amo.registerAttribute("frameText53","TEXT","<div style='top: 247px;left:15px;lin
       <div id="frameText51" class="frameText" style="top:0px;left:0px;width:inherit;height:inherit;-webkit-transform:translateX(-100%);transform:translateX(-100%);-webkit-transition:opacity ease-out 0.3s,transform 0.3s ease-out 0.0s;transition:opacity ease-out 0.3s,transform 0.3s ease-out 0.0s;">!{frameText51}</div>
       <div id="frameText52" class="frameText" style="top:0px;left:0px;width:inherit;height:inherit;-webkit-transform:translateX(-100%);transform:translateX(-100%);-webkit-transition:opacity ease-out 0.3s,transform 0.3s ease-out 0.1s;transition:opacity ease-out 0.3s,transform 0.3s ease-out 0.1s;">!{frameText52}</div>
       <div id="frameText53" class="frameText" style="top:0px;left:0px;width:inherit;height:inherit;-webkit-transform:translateX(-100%);transform:translateX(-100%);-webkit-transition:opacity ease-out 0.3s,transform 0.3s ease-out 0.2s;transition:opacity ease-out 0.3s,transform 0.3s ease-out 0.2s;">!{frameText53}</div>
+      <div id="priceLabel" class="asset" data-image="priceLabel" style="top:0px;left:0px;width:inherit;height:inherit;-webkit-transform:translateY(-100%);transform:translateY(-100%);-webkit-transition:opacity ease-out 0.3s,transform 0.3s ease-out 0.3s;transition:opacity ease-out 0.3s,transform 0.3s ease-out 0.3s;"></div>
       <div id="frame1" class="frame"
         style="transform-origin:bottom center;
         -webkit-transition:opacity ease-out 0.3s, transform ease-out 0.3s;
@@ -256,6 +235,7 @@ amo.registerAttribute("frameText53","TEXT","<div style='top: 247px;left:15px;lin
           staticData: {
             logoImage: 'images/160x600_Logo_Optimum.png',
             // introLogoImage: 'images/160x600_Logo_Optimum.png',
+            priceLabel: '160x600_OPT_AugPFL_ACQ_AO_Amz_64PFL_NonSub_NY_Img_Frame05.png',
             // starImage: 'images/star.svg',
             ctaBtn: '#0084d6',
             ctaBtnHover: '#005990',
@@ -330,6 +310,8 @@ amo.registerAttribute("frameText53","TEXT","<div style='top: 247px;left:15px;lin
                             ad.layers.frameText52.style.transform = '';
                             ad.layers.frameText53.style.webkitTransform = '';
                             ad.layers.frameText53.style.transform = '';
+                            ad.layers.priceLabel.style.webkitTransform = '';
+                            ad.layers.priceLabel.style.transform = '';
                           }, 200);
                         }, 3000);
                       }, 200);
