--- a/A/Altice/AlticeAugustCreative/ads/OPT_Movers/300x600/300x600.html
+++ b/A/Altice/AlticeAugustCreative/ads/OPT_Movers/300x600/300x600.html
@@ -7,28 +7,6 @@
     <link rel="stylesheet" href="https://assets.everesttech.net/static/css/style.min.css">
     <script type="text/javascript" src="https://ads.everesttech.net/ads/static/local/AMOLibrary.js"></script>
     <script src="https://assets.everesttech.net/static/js/script.min.js" charset="utf-8"></script>
-    <script type="text/javascript">
-      amo.registerAttribute("frameImage1", "IMAGE", "assets/OPT_AO_64/300x600_OPT_Movers_April_IntroImage_Frame_01.png");
-      amo.registerAttribute("frameText1", "TEXT", "Every move should<br>include great style.");
-      amo.registerAttribute("frameImage2", "IMAGE", "assets/OPT_AO_64/300x600_OPT_Movers_April_ProductImage_Frame_02.png");
-      amo.registerAttribute("frameText21", "TEXT", "<div style='top: 55px;left:20px;line-height:1.1;'><div style='font-size: 24px;letter-spacing: -0.2px;'>Move with Altice One</div><div style='font-size:24px;color: #0084d6;letter-spacing: -0.5px;'>Our Lowest 2-Year Offer</div></div>");//<div style='top:67px;left:20px;font-size:24px;letter-spacing:-0.35px;'>You\'ll want to keep this.</div>
-      amo.registerAttribute("frameText22", "TEXT", "<div style='top: 114px;left:20px;font-size:16px;letter-spacing:-0.1px;'><div style='color:#0084d6;font-size: 29px;'><span>$74.99<sub style='font-size: 14px;vertical-align: 3%;margin-left: 2px;'>mo.</sub></span><div style='border-top: 3px solid;width: 99px;position: absolute;top: 19px;left: -2px;transform: rotate(-10deg);'></div></div><div style='color: #0084d6;font-size: 46px;margin-top: -9px;margin-left: -2px;letter-spacing: -0.5px;'><span>$64.99</span></div><div class='AlticeRegular' style='font-size: 15px;margin-top: -5px;letter-spacing: -0.1px;line-height: 1.1;'><font class='AlticeBold'>Save $10 a month in year 1</font><br>plus taxes, fees &amp; charges</div></div>");
-      amo.registerAttribute("frameText23", "TEXT", "&nbsp;");
-      amo.registerAttribute("frameImage3", "IMAGE", "assets/OPT_AO_64/300x600_OPT_Movers_April_ProductImage_Frame_03.png");
-      amo.registerAttribute("frameText31", "TEXT", "<div style='top: 27px;left: 17px;line-height: 1.6;font-size: 16px;letter-spacing: -2px;'><div style='color: #0084d6;font-size: 84px;'><sup style='font-size:60%;vertical-align: 31%;margin-right: -3px;'>$</sup>200</div></div>");
-      amo.registerAttribute("frameText32", "TEXT", "<div style='top: 135px;left: 20px;line-height: 1.1;font-size: 32px;'>Amazon.com<br>Gift Card.</div>");
-      amo.registerAttribute("frameText33", "TEXT", "<div class='AlticeRegular' style='top: 212px;left: 20px;line-height: 1.2;letter-spacing: -0.25px;font-size: 16px;'>Restrictions apply, see<br>amazon.com/gc-legal</div>");
-      amo.registerAttribute("frameImage4", "IMAGE", "assets/OPT_AO_64/300x600_OPT_Movers_April_ProductImage_Frame_04.png");
-      amo.registerAttribute("frameText41", "TEXT", "<div style='top: 18px;left: 20px;line-height: 1.4;font-size: 22px;'><div><span style='color:#0084d6;padding-right:5px;'>+</span>Up to 200 Mbps<div style='margin-left: 19px;margin-top: -2px;'>Internet</div></div><div><span style='color:#0084d6;padding-right:5px;'>+</span>220 TV Channels</div></div>");
-      amo.registerAttribute("frameText42", "TEXT", "<div style='top: 109px;left: 20px;line-height: 1.4;font-size: 22px;'><div><span style='color:#0084d6;padding-right:5px;'>+</span>40% Better WiFi</div></div>");
-      amo.registerAttribute("frameText43", "TEXT", "<div style='top: 143px;left: 20px;line-height: 1.4;font-size: 22px;'><div><span style='color:#0084d6;padding-right:5px;'>+</span>Voice Activated<div style='margin-top: -2px;margin-left: 19px;'>Remote</div></div><div><span style='color:#0084d6;padding-right:5px;'>+</span>4K Ultra HD</div><div style='position: absolute;top:98px;left: 0px;font-size: 9.5px;line-height: 1;' class='AlticeRegular'>Wired connection.<br>WiFi speeds may vary.</div></div>");
-      amo.registerAttribute("frameImage5", "IMAGE", "assets/OPT_AO_64/300x600_OPT_Movers_April_ProductImage_Frame_05.png");
-      amo.registerAttribute("frameText51", "TEXT", "<div style='top: 55px;left:20px;line-height:1.1;'><div style='font-size: 30px;letter-spacing: -0.2px;'>Altice One</div><div style='font-size: 30px;color: #0084d6;letter-spacing: -0.1px;'>Our Lowest<br>Price Ever!</div></div>");
-      amo.registerAttribute("frameText52", "TEXT", "<div style='top: 157px;left: 20px;line-height:1.1;'><div style='color: #0084d6;font-size: 76px;'><sup style='font-size:60%;vertical-align: 45%;margin-right: -2px;'>$</sup>64<sup style='font-size:60%;vertical-align: 45%;margin-left: -2px;'>99</sup></div><div style='font-size: 20px;letter-spacing: -0.3px;margin-top: -6px;'>mo./1st yr.<div class='AlticeRegular' style='font-size: 12.6px;margin-top: 0px;'>plus taxes, fees &amp; charges</div></div></div>");
-      amo.registerAttribute("frameText53", "TEXT", "<div style='top: 458px;left:20px;line-height: 1.2;font-size: 16px;letter-spacing:-0.1px;'><div>$200 Amazon.com<br>Gift Card. <span class='AlticeRegular' style='font-size: 76%;'>Restrictions apply.</span></div></div>");
-      amo.registerAttribute("ctaText", "TEXT", "Learn more");
-      amo.registerClick("clickUrl", "https://adobe.com/#Altice");
-    </script>
     <script type="text/javascript">var addTypingContent=function(d){if(d){var a=d.innerHTML;a&&a.length&&(a=a.split("&amp;").join("&").split("&lt;").join("<").split("&gt;").join(">"));var b=a.match(/<.*?>/g);b=b&&b.length?b:[];a=a.split(/<.*?>/g);a=a.map(function(a){return a.split("").map(function(a){return'<type class="transparent">'+a+"</type>"}).join("")});var c=b;a.length<c&&(b=a,a=c,c=b);c.push("");d.innerHTML=a.map(function(a,b){return a+c[b]}).join("")}};</script>
     <style media="screen">
       @font-face {
@@ -90,7 +68,7 @@
       #cta:hover { background-color: !{ctaBtnHover}; }
     </style>
   <!-- Start of overrode asset attributes values -->
-<script type="text/javascript"> 
+<script type="text/javascript">
 amo.registerClick("clickUrl","https://www.optimum.com?s_cid=MovJulyAO64-_-d&utm_source=programmatic&utm_medium=display&utm_campaign=acqbanner");
 amo.registerAttribute("ctaText","TEXT","Learn more");
 amo.registerAttribute("frameImage1","IMAGE","300x600_OPT_Movers_April_IntroImage_Frame_01.png");
@@ -99,18 +77,18 @@ amo.registerAttribute("frameImage3","IMAGE","300x600_OPT_Movers_April_ProductIma
 amo.registerAttribute("frameImage4","IMAGE","300x600_OPT_Movers_April_ProductImage_Frame_04.png");
 amo.registerAttribute("frameImage5","IMAGE","300x600_OPT_Movers_April_ProductImage_Frame_05.png");
 amo.registerAttribute("frameText1","TEXT","Every move should<br>include great style.");
-amo.registerAttribute("frameText21","TEXT","<div style='top: 55px;left:20px;line-height:1.1;'><div style='font-size: 24px;letter-spacing: -0.2px;'>Move with Altice One</div><div style='font-size:24px;color: #0084d6;letter-spacing: -0.5px;'>Our Lowest 2-Year Offer</div></div>");
-amo.registerAttribute("frameText22","TEXT","<div style='top: 114px;left:20px;font-size:16px;letter-spacing:-0.1px;'><div style='color:#0084d6;font-size: 29px;'><span>$74.99<sub style='font-size: 14px;vertical-align: 3%;margin-left: 2px;'>mo.</sub></span><div style='border-top: 3px solid;width: 99px;position: absolute;top: 19px;left: -2px;transform: rotate(-10deg);'></div></div><div style='color: #0084d6;font-size: 46px;margin-top: -9px;margin-left: -2px;letter-spacing: -0.5px;'><span>$64.99</span></div><div class='AlticeRegular' style='font-size: 15px;margin-top: -5px;letter-spacing: -0.1px;line-height: 1.1;'><font class='AlticeBold'>Save $10 a month in year 1</font><br>plus taxes, fees &amp; charges</div></div>");
+amo.registerAttribute("frameText21","TEXT","<div style='top: 55px;left:20px;line-height:1.1;'><div style='font-size: 24px;letter-spacing: -0.2px;'>Moving?</div><div style='font-size:24px;color: #0084d6;letter-spacing: -0.5px;'>Get Altice One +<br>Internet</div></div>");
+amo.registerAttribute("frameText22","TEXT","<div style='top: 126px;left: 21px;line-height:1.1;'><div style='color: #0084d6;font-size: 69px;'><sup style='font-size: 49%;vertical-align: 63%;margin-right: -1px;'>$</sup>64<sup style='font-size: 49%;vertical-align: 67%;margin-left: 2px;'>99</sup></div><div style='font-size: 15px;letter-spacing: -0.2px;margin-top: -13px;'>mo. <font style='color:#0084d6;'>for life</font><div class='AlticeRegular' style='font-size: 11px;margin-top: 1px;letter-spacing: -0.1px;'>Plus taxes, fees &amp; charges</div></div></div>");
 amo.registerAttribute("frameText23","TEXT","&nbsp;");
-amo.registerAttribute("frameText31","TEXT","<div style='top: 27px;left: 17px;line-height: 1.6;font-size: 16px;letter-spacing: -2px;'><div style='color: #0084d6;font-size: 84px;'><sup style='font-size:60%;vertical-align: 31%;margin-right: -3px;'>$</sup>200</div></div>");
+amo.registerAttribute("frameText31","TEXT","<div style='top: 27px;left: 17px;line-height: 1.6;font-size: 16px;letter-spacing: -2px;'><div style='color: #0084d6;font-size: 84px;'><sup style='font-size:60%;vertical-align: 31%;margin-right: -3px;'>$</sup>100</div></div>");
 amo.registerAttribute("frameText32","TEXT","<div style='top: 135px;left: 20px;line-height: 1.1;font-size: 32px;'>Amazon.com<br>Gift Card.</div>");
-amo.registerAttribute("frameText33","TEXT","<div class='AlticeRegular' style='top: 212px;left: 20px;line-height: 1.2;letter-spacing: -0.25px;font-size: 16px;'>Restrictions apply, see<br>amazon.com/gc-legal</div>");
+amo.registerAttribute("frameText33","TEXT","<div class='AlticeRegular' style='top: 212px;left: 20px;line-height: 1.2;letter-spacing: -0.25px;font-size: 9pt;'>Restrictions apply, see<br>amazon.com/gc-legal</div>");
 amo.registerAttribute("frameText41","TEXT","<div style='top: 18px;left: 20px;line-height: 1.4;font-size: 22px;'><div><span style='color:#0084d6;padding-right:5px;'>+</span>Up to 200 Mbps<div style='margin-left: 19px;margin-top: -2px;'>Internet</div></div><div><span style='color:#0084d6;padding-right:5px;'>+</span>220 TV Channels</div></div>");
 amo.registerAttribute("frameText42","TEXT","<div style='top: 109px;left: 20px;line-height: 1.4;font-size: 22px;'><div><span style='color:#0084d6;padding-right:5px;'>+</span>40% Better WiFi</div></div>");
 amo.registerAttribute("frameText43","TEXT","<div style='top: 143px;left: 20px;line-height: 1.4;font-size: 22px;'><div><span style='color:#0084d6;padding-right:5px;'>+</span>Voice Activated<div style='margin-top: -2px;margin-left: 19px;'>Remote</div></div><div><span style='color:#0084d6;padding-right:5px;'>+</span>4K Ultra HD</div><div style='position: absolute;top:98px;left: 0px;font-size: 9.5px;line-height: 1;' class='AlticeRegular'>Wired connection.<br>WiFi speeds may vary.</div></div>");
-amo.registerAttribute("frameText51","TEXT","<div style='top: 55px;left:20px;line-height:1.1;'><div style='font-size: 30px;letter-spacing: -0.2px;'>Altice One</div><div style='font-size: 30px;color: #0084d6;letter-spacing: -0.1px;'>Our Lowest<br>Price Ever!</div></div>");
-amo.registerAttribute("frameText52","TEXT","<div style='top: 157px;left: 20px;line-height:1.1;'><div style='color: #0084d6;font-size: 76px;'><sup style='font-size:60%;vertical-align: 45%;margin-right: -2px;'>$</sup>64<sup style='font-size:60%;vertical-align: 45%;margin-left: -2px;'>99</sup></div><div style='font-size: 20px;letter-spacing: -0.3px;margin-top: -6px;'>mo./1st yr.<div class='AlticeRegular' style='font-size: 12.6px;margin-top: 0px;'>plus taxes, fees &amp; charges</div></div></div>");
-amo.registerAttribute("frameText53","TEXT","<div style='top: 458px;left:20px;line-height: 1.2;font-size: 16px;letter-spacing:-0.1px;'><div>$200 Amazon.com<br>Gift Card. <span class='AlticeRegular' style='font-size: 76%;'>Restrictions apply.</span></div></div>");
+amo.registerAttribute("frameText51","TEXT","<div style='top: 59px;left:21px;line-height:1;'><div style='font-size: 30px;letter-spacing: -0.2px;'>Altice One +<br> Internet</div></div>");
+amo.registerAttribute("frameText52","TEXT","<div style='top: 126px;left: 131px;line-height:1.1;'><div style='color: #0084d6;font-size: 69px;'><sup style='font-size: 49%;vertical-align: 63%;margin-right: -1px;'>$</sup>64<sup style='font-size: 49%;vertical-align: 67%;margin-left: 2px;'>99</sup></div><div style='font-size: 15px;letter-spacing: -0.2px;margin-top: -13px;'>mo. <font style='color:#0084d6;'>for life</font><div class='AlticeRegular' style='font-size: 11px;margin-top: 1px;letter-spacing: -0.1px;'>Plus taxes, fees &amp; charges</div></div></div>");
+amo.registerAttribute("frameText53","TEXT","<div style='top: 240px;left: 21px;line-height: 1.4;font-size: 18px;letter-spacing:-0.1px;'><div><span style='color:#0084d6;padding-right: 0px;'>+</span>$100 Amazon.com Gift Card</div><div style='color:#0084d6;'><span style='color:#0084d6;padding-right:0px;'>+</span>No Annual Contract</div></div>");
 </script>
 <!-- End of overrode asset attributes values -->
 </head>
@@ -149,6 +127,7 @@ amo.registerAttribute("frameText53","TEXT","<div style='top: 458px;left:20px;lin
       <div id="frameText51" class="frameText" style="top:0px;left:0px;width:inherit;height:inherit;-webkit-transform:translateX(-100%);transform:translateX(-100%);-webkit-transition:opacity ease-out 0.3s,transform 0.3s ease-out 0.0s;transition:opacity ease-out 0.3s,transform 0.3s ease-out 0.0s;">!{frameText51}</div>
       <div id="frameText52" class="frameText" style="top:0px;left:0px;width:inherit;height:inherit;-webkit-transform:translateX(-100%);transform:translateX(-100%);-webkit-transition:opacity ease-out 0.3s,transform 0.3s ease-out 0.1s;transition:opacity ease-out 0.3s,transform 0.3s ease-out 0.1s;">!{frameText52}</div>
       <div id="frameText53" class="frameText" style="top:0px;left:0px;width:inherit;height:inherit;-webkit-transform:translateX(-100%);transform:translateX(-100%);-webkit-transition:opacity ease-out 0.3s,transform 0.3s ease-out 0.2s;transition:opacity ease-out 0.3s,transform 0.3s ease-out 0.2s;">!{frameText53}</div>
+      <div id="priceLabel" class="asset" data-image="priceLabel" style="top:0px;left:0px;width:inherit;height:inherit;-webkit-transform:translateX(-100%);transform:translateX(-100%);-webkit-transition:opacity ease-out 0.3s,transform 0.3s ease-out 0.3s;transition:opacity ease-out 0.3s,transform 0.3s ease-out 0.3s;"></div>
       <div id="frame1" class="frame"
         style="transform-origin:bottom center;
         -webkit-transition:opacity ease-out 0.3s, transform ease-out 0.3s;
@@ -258,6 +237,7 @@ amo.registerAttribute("frameText53","TEXT","<div style='top: 458px;left:20px;lin
           staticData: {
             logoImage: 'images/300x600_Logo_Optimum.png',
             // introLogoImage: 'images/300x600_Logo_Optimum.png',
+            priceLabel: '300x600_OPT_AugPFL_ACQ_AO_Amz_64PFL_NonSub_NY_Img_Frame05.png',
             // starImage: 'images/star.svg',
             ctaBtn: '#0084d6',
             ctaBtnHover: '#005990',
@@ -328,6 +308,8 @@ amo.registerAttribute("frameText53","TEXT","<div style='top: 458px;left:20px;lin
                             ad.layers.frameText52.style.transform = '';
                             ad.layers.frameText53.style.webkitTransform = '';
                             ad.layers.frameText53.style.transform = '';
+                            ad.layers.priceLabel.style.webkitTransform = '';
+                            ad.layers.priceLabel.style.transform = '';
                           }, 200);
                         }, 3000);
                       }, 200);
