--- a/A/Altice/AlticeAugustCreative/ads.html
+++ b/A/Altice/AlticeAugustCreative/ads.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Ads</title>
+    <!-- <link rel="icon" href="favicon-16x16.ico" type="image/x-icon"> -->
+    <link rel="icon" href="favicon-32x32.ico" type="image/x-icon">
     <style media="screen">
       body {
         min-width: 1024px;
