--- a/A/Altice/AlticeAugustCreative/ads/P3_SDL_2P_79_Non-AO/160x600/160x600.html
+++ b/A/Altice/AlticeAugustCreative/ads/P3_SDL_2P_79_Non-AO/160x600/160x600.html
@@ -81,7 +81,7 @@ amo.registerAttribute("frameText22","TEXT","<div style='top: 105px;left: 16px;li
 amo.registerAttribute("frameText23","TEXT","&nbsp;");
 amo.registerAttribute("frameText31","TEXT","<div style='top: 48px;left: 14px;line-height: 1.6;font-size: 15px;'><div><span style='color:#0084d6;padding-right:4px;'>+</span>1 Gig Internet</div><div><span style='color:#0084d6;padding-right:4px;'>+</span>Unlimited Data</div></div>");
 amo.registerAttribute("frameText32","TEXT","<div style='top: 96px;left: 14px;line-height: 1.6;font-size: 15px;'><div><span style='color:#0084d6;padding-right:4px;'>+</span>Over 200</div><div style='margin-top: -4px;margin-left: 14px;'>Channels</div></div>");
-amo.registerAttribute("frameText33","TEXT","<div style='top: 140px;left: 14px;line-height: 1.6;font-size: 15px;'><div><span style='color:#0084d6;padding-right:4px;'>+</span>Free Installation</div></div></div>");
+amo.registerAttribute("frameText33","TEXT","<div style='top: 140px;left: 14px;line-height: 1.6;font-size: 15px;'><div style='color:#0084d6;'><span style='color:#0084d6;padding-right:4px;'>+</span>No Annual</div><div style='margin-top: -4px;margin-left: 14px;color:#0084d6;'>Contract</div></div></div>");
 amo.registerAttribute("frameText41","TEXT","<div style='top: 38px;left: 14px;line-height: 1.6;font-size: 16px;letter-spacing: -2px;'><div style='color: #0084d6;font-size: 52px;'><sup style='font-size:60%;vertical-align: 31%;margin-right: -1px;'>$</sup>100</div></div>");
 amo.registerAttribute("frameText42","TEXT","<div style='top: 103px;left: 16px;line-height: 1.1;font-size: 22px;'>Amazon.com<br>Gift Card</div>");
 amo.registerAttribute("frameText43","TEXT","<div class='AlticeRegular' style='top:154px;left: 15px;line-height: 1.2;letter-spacing: -0.3px;font-size: 10px;'>Restrictions apply, see<br>amazon.com/gc-legal</div>");
@@ -270,8 +270,7 @@ amo.registerAttribute("frameVideo1", "TEXT", "https://ct.tubemogul.com/web/altic
             if('button' in e.target.dataset) { } else { amo.onAdClick('clickUrl'); } //amo.onDynAdClick(adData.feedData, "CLICK", adClickUrl); }
           });
           setTimeout(function(){ ad.layers.frameVideo1.querySelector('video').src = adData.frameVideo1; },800);
-          var playOtherFrames = function(){};
-                  var playOtherFrames1 = function(){
+          var playOtherFrames = function(){
             setTimeout(function(){
               ad.layers.frame1.style.webkitTransform = 'rotate(30deg) translate(50%,-50%)';
               ad.layers.frame1.style.transform = 'rotate(30deg) translate(50%,-50%)';
