--- a/A/Altice/AlticeAugustCreative/ads/P3_SDL_2P_79_Non-AO/300x250/300x250.html
+++ b/A/Altice/AlticeAugustCreative/ads/P3_SDL_2P_79_Non-AO/300x250/300x250.html
@@ -22,8 +22,8 @@
     </style>
     <style media="screen" data-dynamic="style">
       #ad {
-        width: 160px;
-        height: 600px;
+        width: 300px;
+        height: 250px;
         font-family: Arial,Helvetica,sans-serif;
         color: #000;
       }
@@ -47,48 +47,50 @@
       .verticalBar {
         position: absolute;
         top:0px;
-        width: 5px;
-        height: 48px;
+        width: 7px;
+        height: 58px;
         background-color: #fff;
         transform-origin: top center;
       }
       .star {
         position: absolute;
         top: 0px;
-        width: 12px;
-        height: 12px;
+        width: 15px;
+        height: 15px;
       }
       .star-container {
         position: absolute;
-        top: 51px;
-        width: 12px;
-        height: 12px;
+        top: 62px;
+        width: 15px;
+        height: 15px;
       }
       #cta { background-color: !{ctaBtn}; }
       #cta:hover { background-color: !{ctaBtnHover}; }
+      #introCta { background: none; }
+      #introCta:hover { background-color: rgba(0,0,0,0.5); }
     </style>
   <!-- Start of overrode asset attributes values -->
 <script type="text/javascript">
 amo.registerClick("clickUrl","https://www.Optimum.com?s_cid=JuneAO64-_-d&bsp=&utm_source=programmatic&utm_medium=display&utm_campaign=acqbanner");
 amo.registerAttribute("ctaText","TEXT","Learn more");
-amo.registerAttribute("frameImage2","IMAGE","160x600_OPT_Aug_ACQ_iStart_TV&Int_49Yr1_NonSub_NY_Img_Frame02.png");
+amo.registerAttribute("frameImage2","IMAGE","300x250_OPT_Aug_ACQ_iStart_TV&Int_49Yr1_NonSub_NY_Img_Frame02.png");
 amo.registerAttribute("frameImage3","IMAGE","1x1.png");
-amo.registerAttribute("frameImage4","IMAGE","160x600_OPT_AugPFL_ACQ_AO_Amz_64PFL_NonSub_NY_Img_AmzCard100_Frame04.png");
-amo.registerAttribute("frameImage5","IMAGE","160x600_OPT_AugPFL_ACQ_AO_Amz_64PFL_NonSub_NY_Img_AmzCard100_Frame04.png");
-amo.registerAttribute("frameImage1","IMAGE","160x600_OPT_AugPFL_ACQ_AO_Amz_64PFL_NonSub_NY_Img_Frame01.png");
-amo.registerAttribute("frameText21","TEXT","<div style='top: 55px;left:15px;line-height:1.1;'><div style='font-size: 24px;letter-spacing: -0.2px;'>TV + 1 Gig<br>Internet</div></div>");
-amo.registerAttribute("frameText22","TEXT","<div style='top: 105px;left: 16px;line-height:1.1;'><div style='color: #0084d6;font-size: 62px;'><sup style='font-size: 49%;vertical-align: 63%;margin-right: -1px;'>$</sup>79<sup style='font-size: 49%;vertical-align: 67%;margin-left: 2px;'>99</sup></div><div style='font-size: 14px;letter-spacing: -0.3px;margin-top: -9px;'>mo. <font style='color:#0084d6;'>for life</font><div class='AlticeRegular' style='font-size: 10px;margin-top: 1px;letter-spacing: -0.1px;'>Plus taxes, fees &amp; charges</div></div></div>");
-amo.registerAttribute("frameText23","TEXT","&nbsp;");
-amo.registerAttribute("frameText31","TEXT","<div style='top: 48px;left: 14px;line-height: 1.6;font-size: 15px;'><div><span style='color:#0084d6;padding-right:4px;'>+</span>1 Gig Internet</div><div><span style='color:#0084d6;padding-right:4px;'>+</span>Unlimited Data</div></div>");
-amo.registerAttribute("frameText32","TEXT","<div style='top: 96px;left: 14px;line-height: 1.6;font-size: 15px;'><div><span style='color:#0084d6;padding-right:4px;'>+</span>Over 200</div><div style='margin-top: -4px;margin-left: 14px;'>Channels</div></div>");
-amo.registerAttribute("frameText33","TEXT","<div style='top: 140px;left: 14px;line-height: 1.6;font-size: 15px;'><div><span style='color:#0084d6;padding-right:4px;'>+</span>Free Installation</div></div></div>");
-amo.registerAttribute("frameText41","TEXT","<div style='top: 38px;left: 14px;line-height: 1.6;font-size: 16px;letter-spacing: -2px;'><div style='color: #0084d6;font-size: 52px;'><sup style='font-size:60%;vertical-align: 31%;margin-right: -1px;'>$</sup>100</div></div>");
-amo.registerAttribute("frameText42","TEXT","<div style='top: 103px;left: 16px;line-height: 1.1;font-size: 22px;'>Amazon.com<br>Gift Card</div>");
-amo.registerAttribute("frameText43","TEXT","<div class='AlticeRegular' style='top:154px;left: 15px;line-height: 1.2;letter-spacing: -0.3px;font-size: 10px;'>Restrictions apply, see<br>amazon.com/gc-legal</div>");
-amo.registerAttribute("frameText51","TEXT","<div style='top: 110px;left:15px;line-height:1.1;'><div style='font-size: 24px;letter-spacing: -0.2px;'>TV + 1 Gig<br>Internet</div></div>");
-amo.registerAttribute("frameText52","TEXT","<div style='top: 160px;left: 16px;line-height:1.1;'><div style='color: #0084d6;font-size: 62px;'><sup style='font-size: 49%;vertical-align: 63%;margin-right: -1px;'>$</sup>79<sup style='font-size: 49%;vertical-align: 67%;margin-left: 2px;'>99</sup></div><div style='font-size: 14px;letter-spacing: -0.3px;margin-top: -9px;'>mo. <font style='color:#0084d6;'>for life</font><div class='AlticeRegular' style='font-size: 10px;margin-top: 1px;letter-spacing: -0.1px;'>Plus taxes, fees &amp; charges</div></div></div>");
-amo.registerAttribute("frameText53","TEXT","<div style='top: 279px;left: 16px;line-height: 1.5;font-size: 14px;letter-spacing:-0.1px;'><div><span style='color:#0084d6;padding-right: 0px;'>+</span>$100 Amazon.com</div><div style='margin-top: -5px;margin-left: 9px;'>Gift Card</div><div style='color:#0084d6;'><span style='color:#0084d6;padding-right:0px;'>+</span>No Annual</div><div style='margin-top: -4px;margin-left: 9px;color: #0084d6;'>Contract</div><div style='position: absolute;top: -17px;left: -1px;width: 128px;border: 1px solid #aaabac;'></div></div>");
-amo.registerAttribute("frameVideo1", "TEXT", "https://ct.tubemogul.com/web/altice/august/160x600_79.mp4");
+amo.registerAttribute("frameImage4","IMAGE","300x250_OPT_AugPFL_ACQ_AO_Amz_64PFL_NonSub_NY_Img_AmzCard100_Frame04.png");
+amo.registerAttribute("frameImage5","IMAGE","1x1.png");
+amo.registerAttribute("frameImage1","IMAGE","300x250_OPT_AugPFL_ACQ_AO_Amz_64PFL_NonSub_NY_Img_Frame01.png");
+amo.registerAttribute("frameText21","TEXT","<div style='top: 34px;left:20px;line-height:1.1;'><div style='font-size: 20px;letter-spacing: -0.1px;'>TV + 1 Gig Internet</div></div>");
+amo.registerAttribute("frameText22","TEXT","<div style='top: 56px;left:20px;line-height:1.1;'><div style='color: #0084d6;font-size: 62px;margin-top: 0px;margin-left: -3px;letter-spacing: -0.7px;'><sup style='font-size: 54%;vertical-align:55%;'>$</sup>79<sup style='font-size: 54%;vertical-align:55%;'>99</sup></div></div>");
+amo.registerAttribute("frameText23","TEXT","<div style='top: 113px;left:20px;font-size: 16px;letter-spacing: -0.5px;'>mo. <font style='color:#0084d6;'>for life</font><div class='AlticeRegular' style='font-size: 10px;margin-top: -1px;letter-spacing: -0.1px;'>Plus taxes, fees &amp; charges</div></div>");
+amo.registerAttribute("frameText31","TEXT","<div style='top: 43px;left: 20px;line-height: 1.6;font-size: 18px;'><div><span style='color:#0084d6;padding-right:4px;'>+</span>1 Gig Internet</div></div>");
+amo.registerAttribute("frameText32","TEXT","<div style='top: 70px;left: 20px;line-height: 1.4;font-size: 18px;'><div><span style='color:#0084d6;padding-right:4px;'>+</span>Unlimited Data</div><div><span style='color:#0084d6;padding-right:4px;'>+</span>Over 200 Channels</div></div>");
+amo.registerAttribute("frameText33","TEXT","<div style='top: 118px;left: 20px;line-height: 1.6;font-size: 18px;'><div style='color:#0084d6;'><span style='color:#0084d6;padding-right:4px;'>+</span>No Annual Contract</div></div></div>");
+amo.registerAttribute("frameText41","TEXT","<div style='top: 31px;left: 19px;line-height: 1.6;font-size: 16px;'><div style='color: #0084d6;font-size: 58px;'><sup style='font-size: 46%;vertical-align: 53%;margin-right: 0px;'>$</sup>100</div></div>");
+amo.registerAttribute("frameText42","TEXT","<div style='top: 106px;left: 20px;line-height: 1;font-size: 20px;'>Amazon.com<br>Gift Card</div>");
+amo.registerAttribute("frameText43","TEXT","<div class='AlticeRegular' style='top: 183px;left: 19px;line-height: 1.1;letter-spacing: -0.25px;font-size:9.5px;'>Restrictions apply, see<br>amazon.com/gc-legal</div>");
+amo.registerAttribute("frameText51","TEXT","<div style='top: 34px;left:20px;line-height:1.1;'><div style='font-size: 20px;letter-spacing: -0.1px;'>TV + 1 Gig Internet</div></div>");
+amo.registerAttribute("frameText52","TEXT","<div style='top: 61px;left: 109px;line-height:1.1;'><div style='color: #0084d6;font-size: 61px;'><sup style='font-size: 55%;vertical-align: 53%;margin-right: 0px;'>$</sup>79<sup style='font-size: 55%;vertical-align: 58%;margin-left: 0px;'>99</sup></div><div style='font-size: 13.5px;letter-spacing:-0.1px;position: absolute;top: 41px;left: 98px;width: 100px;'>mo. <font style='color:#0084d6;'>for life</font><div class='AlticeRegular' style='font-size: 10px;margin-top: 1px;position: absolute;top: 21px;left: -97px;'>Plus taxes, fees &amp; charges</div></div></div>");
+amo.registerAttribute("frameText53","TEXT","<div style='top:153px;left:20px;line-height:1.3;font-size:14px;letter-spacing:-0.1px;'><div><span style='color:#0084d6;padding-right:0px;'>+</span>$100 Amazon.com Gift Card</div><div style='color:#0084d6;'><span style='color:#0084d6;padding-right:0px;'>+</span>No Annual Contract</div></div>");
+amo.registerAttribute("frameVideo1", "TEXT", "https://ct.tubemogul.com/web/altice/august/300x250_79.mp4");
 </script>
 <!-- End of overrode asset attributes values -->
 </head>
@@ -110,7 +112,13 @@ amo.registerAttribute("frameVideo1", "TEXT", "https://ct.tubemogul.com/web/altic
           width:inherit;
           height:inherit;">
       </div> -->
-
+      <div id="logoImage" class="asset"
+        data-image="logoImage"
+        style="top:0px;
+          left:0px;
+          width:inherit;
+          height:inherit;">
+      </div>
 
       <div id="frameImage2" class="asset" data-image="frameImage2" style="top:0px;left:0px;width:inherit;height:inherit;-webkit-transition:opacity ease-out 0.3s,transform ease-out 0.3s;transition:opacity ease-out 0.3s,transform ease-out 0.3s;"></div>
       <div id="frameText21" class="frameText" style="top:0px;left:0px;width:inherit;height:inherit;-webkit-transition:opacity ease-out 0.3s,transform ease-out 0.3s;transition:opacity ease-out 0.3s,transform ease-out 0.3s;">!{frameText21}</div>
@@ -128,12 +136,21 @@ amo.registerAttribute("frameVideo1", "TEXT", "https://ct.tubemogul.com/web/altic
       <div id="frameText51" class="frameText" style="top:0px;left:0px;width:inherit;height:inherit;-webkit-transform:translateX(-100%);transform:translateX(-100%);-webkit-transition:opacity ease-out 0.3s,transform 0.3s ease-out 0.0s;transition:opacity ease-out 0.3s,transform 0.3s ease-out 0.0s;">!{frameText51}</div>
       <div id="frameText52" class="frameText" style="top:0px;left:0px;width:inherit;height:inherit;-webkit-transform:translateX(-100%);transform:translateX(-100%);-webkit-transition:opacity ease-out 0.3s,transform 0.3s ease-out 0.1s;transition:opacity ease-out 0.3s,transform 0.3s ease-out 0.1s;">!{frameText52}</div>
       <div id="frameText53" class="frameText" style="top:0px;left:0px;width:inherit;height:inherit;-webkit-transform:translateX(-100%);transform:translateX(-100%);-webkit-transition:opacity ease-out 0.3s,transform 0.3s ease-out 0.2s;transition:opacity ease-out 0.3s,transform 0.3s ease-out 0.2s;">!{frameText53}</div>
-      <div id="priceLabel" class="asset" data-image="priceLabel" style="top:0px;left:0px;width:inherit;height:inherit;-webkit-transform:translateY(-100%);transform:translateY(-100%);-webkit-transition:opacity ease-out 0.3s,transform 0.3s ease-out 0.3s;transition:opacity ease-out 0.3s,transform 0.3s ease-out 0.3s;"></div>
+      <div id="priceLabel" class="asset" data-image="priceLabel" style="top:0px;left:0px;width:inherit;height:inherit;-webkit-transform:translateX(-100%);transform:translateX(-100%);-webkit-transition:opacity ease-out 0.3s,transform 0.3s ease-out 0.3s;transition:opacity ease-out 0.3s,transform 0.3s ease-out 0.3s;"></div>
+      <div id="cta" class="text AlticeBold"
+        data-text="ctaText"
+        style="top:207px;
+          left:20px;
+          width:80px;
+          height:24px;
+          font-size:12px;
+          color:#fff;">
+      </div>
       <div id="frame1" class="frame"
         style="transform-origin:bottom center;
         -webkit-transition:opacity ease-out 0.3s, transform ease-out 0.3s;
         transition:opacity ease-out 0.3s, transform ease-out 0.3s;
-        background-color:#e2e3e4;
+        background-color:#fff;
         opacity:1;">
         <div id="frameVideo1"
           style="top:0px;
@@ -142,13 +159,13 @@ amo.registerAttribute("frameVideo1", "TEXT", "https://ct.tubemogul.com/web/altic
             height:inherit;">
             <video muted playsinline autoplay style="width:100%;"></video>
         </div>
-        <!-- <div id="videoOverlay"
+        <div id="videoOverlay"
           style="top:0px;
             left:0px;
             width:inherit;
             height:inherit;
             background-color:rgba(0,0,0,0.3)">
-        </div> -->
+        </div>
         <!-- <div id="ref" class="asset"
           data-image="ref"
           style="top:0px;
@@ -162,10 +179,12 @@ amo.registerAttribute("frameVideo1", "TEXT", "https://ct.tubemogul.com/web/altic
             left:0px;
             width:inherit;
             height:inherit;
-            -webkit-transform: translateX(-100%);
-            transform: translateX(-100%);
+            transform-origin: 60% 45% 0px;
+            -webkit-transform:scale(0);
+            transform:scale(0);
             -webkit-transition:opacity ease-out 0.3s, transform cubic-bezier(.43,-0.25,.32,1.39) 0.5s;
-            transition:opacity ease-out 0.3s, transform cubic-bezier(.43,-0.25,.32,1.39) 0.5s;">
+            transition:opacity ease-out 0.3s, transform cubic-bezier(.43,-0.25,.32,1.39) 0.5s;
+            opacity:0;">
         </div> -->
         <div id="frameImage1" class="asset"
           data-image="frameImage1"
@@ -180,52 +199,49 @@ amo.registerAttribute("frameVideo1", "TEXT", "https://ct.tubemogul.com/web/altic
             transition:opacity ease-out 0.3s, transform cubic-bezier(.43,-0.25,.32,1.39) 0.5s;
             opacity:0;">
         </div>
-        <!-- <div id="frameText1" class="text-left AlticeBold"
+        <!-- <div id="frameText1" class="text AlticeBold"
           data-text="frameText1"
-          style="top:322px;
-            left:22px;
-            width:120px;
+          data-style="text-align:center;"
+          style="top:46px;
+            left:10px;
+            width:280px;
             height:150px;
-            font-size:27px;
-            line-height:1.1;
-            letter-spacing:0px;
+            font-size:30px;
+            line-height:1;
             font-weight: bold;
-            color:#0084d6;
+            color:#fff;
             opacity:0;">
         </div> -->
-        <!-- <div id="frameText12" class="text-top-left AlticeBold"
+        <!-- <div id="frameText12" class="text AlticeBold"
           data-text="frameText12"
-          style="top:318px;
-            left:20px;
-            width:120px;
-            height:180px;
+          data-style="text-align:center;"
+          style="top:75px;
+            left:10px;
+            width:280px;
+            height:100px;
             font-size:24px;
-            line-height:1.1;
+            line-height:1;
+            font-weight: bold;
+            color:#fff;
             opacity:0;">
         </div> -->
-        <!-- <div id="introLogoImage" class="asset"
+        <div id="introLogoImage" class="asset"
           data-image="introLogoImage"
           style="top:0px;
             left:0px;
             width:inherit;
             height:inherit;">
-        </div> -->
-      </div>
-      <div id="logoImage" class="asset"
-        data-image="logoImage"
-        style="top:0px;
-          left:0px;
-          width:inherit;
-          height:inherit;">
-      </div>
-      <div id="cta" class="text AlticeBold"
-        data-text="ctaText"
-        style="top:551px;
-          left:42px;
-          width:76px;
-          height:22px;
-          font-size:12px;
-          color:#fff;">
+        </div>
+        <div id="introCta" class="text AlticeBold"
+          data-text="ctaText"
+          style="top:206px;
+            left:19px;
+            width:80px;
+            height:22px;
+            font-size:12px;
+            color:#fff;
+            border:1px solid;">
+        </div>
       </div>
       <div id="overlay" style="top:0px;left:0px;width:inherit;height:inherit;background-color:#fff;opacity:1;-webkit-transition:all 0.5s ease 1s;transition:all 0.5s ease 1s;"></div>
     </div>
@@ -234,10 +250,11 @@ amo.registerAttribute("frameVideo1", "TEXT", "https://ct.tubemogul.com/web/altic
       <div class="AlticeBold" style="color:transparent;">AlticeBold</div>
     </div>
     <script type="text/javascript">
+      var extraFrameFlag = false;
       var ad = new Ad({
         root: document.querySelector('#ad'),
-        width: 160,
-        height: 600,
+        width: 300,
+        height: 250,
         borderWidth: 1,
         borderColor: '#000'
       });
@@ -246,21 +263,17 @@ amo.registerAttribute("frameVideo1", "TEXT", "https://ct.tubemogul.com/web/altic
           cam: {},
           feed: [],
           staticData: {
-            logoImage: 'images/160x600_Logo_Suddenlink.png',
-            // introLogoImage: 'images/160x600_Logo_Suddenlink.png',
-            priceLabel: '160x600_OPT_AugPFL_ACQ_AO_Amz_64PFL_NonSub_NY_Img_Frame05.png',
+            logoImage: 'images/300x250_Logo_Suddenlink.png',
+            introLogoImage: 'images/300x250_Logo_Suddenlink_White.png',
+            priceLabel: '300x250_OPT_AugPFL_ACQ_AO_Amz_64PFL_NonSub_NY_Img_Frame05.png',
             // starImage: 'images/star.svg',
             ctaBtn: '#0084d6',
             ctaBtnHover: '#005990',
-            // ref: 'ref2.jpg',
+            // ref: 'ref5.jpg',
           },
           beforeLoad: function(data){
             data.map(function(content){
-              // if(content.frameText12 && content.frameText12.indexOf('|') != -1) {
-              //   content.frameText11 = content.frameText12.split('|')[0];
-              //   content.frameText13 = content.frameText12.split('|')[2];
-              //   content.frameText12 = content.frameText12.split('|')[1];
-              // }
+
             });
             return data;
           }
@@ -269,13 +282,9 @@ amo.registerAttribute("frameVideo1", "TEXT", "https://ct.tubemogul.com/web/altic
           ad.root.addEventListener("click", function(e) {
             if('button' in e.target.dataset) { } else { amo.onAdClick('clickUrl'); } //amo.onDynAdClick(adData.feedData, "CLICK", adClickUrl); }
           });
+          extraFrameFlag = false;
           setTimeout(function(){ ad.layers.frameVideo1.querySelector('video').src = adData.frameVideo1; },800);
-          var playOtherFrames = function(){};
-                      (function(){
-                      ad.layers.cta.style.opacity = 1;
-                      if('frame1' in ad.layers) ad.layers.frame1.remove();
-                      }())
-                    var playOtherFrames1 = function(){
+          var playOtherFrames = function(){
             setTimeout(function(){
               ad.layers.frame1.style.webkitTransform = 'rotate(30deg) translate(50%,-50%)';
               ad.layers.frame1.style.transform = 'rotate(30deg) translate(50%,-50%)';
@@ -348,6 +357,7 @@ amo.registerAttribute("frameVideo1", "TEXT", "https://ct.tubemogul.com/web/altic
                 playOtherFrames();
             },500);
           }
+          // playOtherFrames();
         });
       }, 2000);
     </script>
