--- a/A/Altice/AlticeAugustCreative/ads/P3_SDL_2P_79_Non-AO/300x600/300x600.html
+++ b/A/Altice/AlticeAugustCreative/ads/P3_SDL_2P_79_Non-AO/300x600/300x600.html
@@ -23,7 +23,7 @@
     <style media="screen" data-dynamic="style">
       #ad {
         width: 300px;
-        height: 250px;
+        height: 600px;
         font-family: Arial,Helvetica,sans-serif;
         color: #000;
       }
@@ -47,50 +47,48 @@
       .verticalBar {
         position: absolute;
         top:0px;
-        width: 7px;
-        height: 58px;
+        width: 10px;
+        height: 56px;
         background-color: #fff;
         transform-origin: top center;
       }
       .star {
         position: absolute;
         top: 0px;
-        width: 15px;
-        height: 15px;
+        width: 20px;
+        height: 20px;
       }
       .star-container {
         position: absolute;
-        top: 62px;
-        width: 15px;
-        height: 15px;
+        top: 61px;
+        width: 20px;
+        height: 20px;
       }
       #cta { background-color: !{ctaBtn}; }
       #cta:hover { background-color: !{ctaBtnHover}; }
-      #introCta { background: none; }
-      #introCta:hover { background-color: rgba(0,0,0,0.5); }
     </style>
   <!-- Start of overrode asset attributes values -->
 <script type="text/javascript">
 amo.registerClick("clickUrl","https://www.Optimum.com?s_cid=JuneAO64-_-d&bsp=&utm_source=programmatic&utm_medium=display&utm_campaign=acqbanner");
 amo.registerAttribute("ctaText","TEXT","Learn more");
-amo.registerAttribute("frameImage2","IMAGE","300x250_OPT_Aug_ACQ_iStart_TV&Int_49Yr1_NonSub_NY_Img_Frame02.png");
+amo.registerAttribute("frameImage2","IMAGE","300x600_OPT_Aug_ACQ_iStart_TV&Int_49Yr1_NonSub_NY_Img_Frame02.png");
 amo.registerAttribute("frameImage3","IMAGE","1x1.png");
-amo.registerAttribute("frameImage4","IMAGE","300x250_OPT_AugPFL_ACQ_AO_Amz_64PFL_NonSub_NY_Img_AmzCard100_Frame04.png");
-amo.registerAttribute("frameImage5","IMAGE","1x1.png");
-amo.registerAttribute("frameImage1","IMAGE","300x250_OPT_AugPFL_ACQ_AO_Amz_64PFL_NonSub_NY_Img_Frame01.png");
-amo.registerAttribute("frameText21","TEXT","<div style='top: 34px;left:20px;line-height:1.1;'><div style='font-size: 20px;letter-spacing: -0.1px;'>TV + 1 Gig Internet</div></div>");
-amo.registerAttribute("frameText22","TEXT","<div style='top: 56px;left:20px;line-height:1.1;'><div style='color: #0084d6;font-size: 62px;margin-top: 0px;margin-left: -3px;letter-spacing: -0.7px;'><sup style='font-size: 54%;vertical-align:55%;'>$</sup>79<sup style='font-size: 54%;vertical-align:55%;'>99</sup></div></div>");
-amo.registerAttribute("frameText23","TEXT","<div style='top: 113px;left:20px;font-size: 16px;letter-spacing: -0.5px;'>mo. <font style='color:#0084d6;'>for life</font><div class='AlticeRegular' style='font-size: 10px;margin-top: -1px;letter-spacing: -0.1px;'>Plus taxes, fees &amp; charges</div></div>");
-amo.registerAttribute("frameText31","TEXT","<div style='top: 43px;left: 20px;line-height: 1.6;font-size: 18px;'><div><span style='color:#0084d6;padding-right:4px;'>+</span>1 Gig Internet</div></div>");
-amo.registerAttribute("frameText32","TEXT","<div style='top: 70px;left: 20px;line-height: 1.4;font-size: 18px;'><div><span style='color:#0084d6;padding-right:4px;'>+</span>Unlimited Data</div><div><span style='color:#0084d6;padding-right:4px;'>+</span>Over 200 Channels</div></div>");
-amo.registerAttribute("frameText33","TEXT","<div style='top: 118px;left: 20px;line-height: 1.6;font-size: 18px;'><div><span style='color:#0084d6;padding-right:4px;'>+</span>Free Installation</div></div></div>");
-amo.registerAttribute("frameText41","TEXT","<div style='top: 31px;left: 19px;line-height: 1.6;font-size: 16px;'><div style='color: #0084d6;font-size: 58px;'><sup style='font-size: 46%;vertical-align: 53%;margin-right: 0px;'>$</sup>100</div></div>");
-amo.registerAttribute("frameText42","TEXT","<div style='top: 106px;left: 20px;line-height: 1;font-size: 20px;'>Amazon.com<br>Gift Card</div>");
-amo.registerAttribute("frameText43","TEXT","<div class='AlticeRegular' style='top: 183px;left: 19px;line-height: 1.1;letter-spacing: -0.25px;font-size:9.5px;'>Restrictions apply, see<br>amazon.com/gc-legal</div>");
-amo.registerAttribute("frameText51","TEXT","<div style='top: 34px;left:20px;line-height:1.1;'><div style='font-size: 20px;letter-spacing: -0.1px;'>TV + 1 Gig Internet</div></div>");
-amo.registerAttribute("frameText52","TEXT","<div style='top: 61px;left: 109px;line-height:1.1;'><div style='color: #0084d6;font-size: 61px;'><sup style='font-size: 55%;vertical-align: 53%;margin-right: 0px;'>$</sup>79<sup style='font-size: 55%;vertical-align: 58%;margin-left: 0px;'>99</sup></div><div style='font-size: 13.5px;letter-spacing:-0.1px;position: absolute;top: 41px;left: 98px;width: 100px;'>mo. <font style='color:#0084d6;'>for life</font><div class='AlticeRegular' style='font-size: 10px;margin-top: 1px;position: absolute;top: 21px;left: -97px;'>Plus taxes, fees &amp; charges</div></div></div>");
-amo.registerAttribute("frameText53","TEXT","<div style='top:153px;left:20px;line-height:1.3;font-size:14px;letter-spacing:-0.1px;'><div><span style='color:#0084d6;padding-right:0px;'>+</span>$100 Amazon.com Gift Card</div><div style='color:#0084d6;'><span style='color:#0084d6;padding-right:0px;'>+</span>No Annual Contract</div></div>");
-amo.registerAttribute("frameVideo1", "TEXT", "https://ct.tubemogul.com/web/altice/august/300x250_79.mp4");
+amo.registerAttribute("frameImage4","IMAGE","300x600_OPT_AugPFL_ACQ_AO_Amz_64PFL_NonSub_NY_Img_AmzCard100_Frame04.png");
+amo.registerAttribute("frameImage5","IMAGE","300x600_OPT_AugPFL_ACQ_AO_Amz_64PFL_NonSub_NY_Img_AmzCard100_Frame04.png");
+amo.registerAttribute("frameImage1","IMAGE","300x600_OPT_AugPFL_ACQ_AO_Amz_64PFL_NonSub_NY_Img_Frame01.png");
+amo.registerAttribute("frameText21","TEXT","<div style='top: 59px;left:21px;line-height:1;'><div style='font-size: 30px;letter-spacing: -0.2px;'>TV + 1 Gig Internet</div></div>");
+amo.registerAttribute("frameText22","TEXT","<div style='top: 90px;left: 21px;line-height:1.1;'><div style='color: #0084d6;font-size: 69px;'><sup style='font-size: 49%;vertical-align: 63%;margin-right: -1px;'>$</sup>79<sup style='font-size: 49%;vertical-align: 67%;margin-left: 2px;'>99</sup></div><div style='font-size: 15px;letter-spacing: -0.2px;margin-top: -13px;'>mo. <font style='color:#0084d6;'>for life</font><div class='AlticeRegular' style='font-size: 11px;margin-top: 1px;letter-spacing: -0.1px;'>Plus taxes, fees &amp; charges</div></div></div>");
+amo.registerAttribute("frameText23","TEXT","&nbsp;");
+amo.registerAttribute("frameText31","TEXT","<div style='top: 55px;left: 20px;line-height: 1.6;font-size: 22px;'><div><span style='color:#0084d6;padding-right:4px;'>+</span>1 Gig Internet</div><div><span style='color:#0084d6;padding-right:4px;'>+</span>Unlimited Data</div></div>");
+amo.registerAttribute("frameText32","TEXT","<div style='top: 125px;left: 20px;line-height: 1.6;font-size: 22px;'><div><span style='color:#0084d6;padding-right:4px;'>+</span>Over 200 Channels</div></div>");
+amo.registerAttribute("frameText33","TEXT","<div style='top: 160px;left: 20px;line-height: 1.6;font-size: 22px;'><div style='color:#0084d6;'><span style='color:#0084d6;padding-right:4px;'>+</span>No Annual Contract</div></div></div>");
+amo.registerAttribute("frameText41","TEXT","<div style='top: 27px;left: 17px;line-height: 1.6;font-size: 16px;letter-spacing: -2px;'><div style='color: #0084d6;font-size: 84px;'><sup style='font-size:60%;vertical-align: 31%;margin-right: -3px;'>$</sup>100</div></div>");
+amo.registerAttribute("frameText42","TEXT","<div style='top: 135px;left: 20px;line-height: 1.1;font-size: 32px;'>Amazon.com<br>Gift Card</div>");
+amo.registerAttribute("frameText43","TEXT","<div class='AlticeRegular' style='top: 212px;left: 20px;line-height: 1.2;letter-spacing: -0.25px;font-size: 9pt;'>Restrictions apply, see<br>amazon.com/gc-legal</div>");
+amo.registerAttribute("frameText51","TEXT","<div style='top: 59px;left:21px;line-height:1;'><div style='font-size: 30px;letter-spacing: -0.2px;'>TV + 1 Gig Internet</div></div>");
+amo.registerAttribute("frameText52","TEXT","<div style='top: 90px;left: 131px;line-height:1.1;'><div style='color: #0084d6;font-size: 69px;'><sup style='font-size: 49%;vertical-align: 63%;margin-right: -1px;'>$</sup>79<sup style='font-size: 49%;vertical-align: 67%;margin-left: 2px;'>99</sup></div><div style='font-size: 15px;letter-spacing: -0.2px;margin-top: -13px;'>mo. <font style='color:#0084d6;'>for life</font><div class='AlticeRegular' style='font-size: 11px;margin-top: 1px;letter-spacing: -0.1px;'>Plus taxes, fees &amp; charges</div></div></div>");
+amo.registerAttribute("frameText53","TEXT","<div style='top: 204px;left: 21px;line-height: 1.4;font-size: 18px;letter-spacing:-0.1px;'><div><span style='color:#0084d6;padding-right: 0px;'>+</span>$100 Amazon.com Gift Card</div><div style='color:#0084d6;'><span style='color:#0084d6;padding-right:0px;'>+</span>No Annual Contract</div></div>");
+amo.registerAttribute("frameVideo1", "TEXT", "https://ct.tubemogul.com/web/altice/august/300x600_79.mp4");
 </script>
 <!-- End of overrode asset attributes values -->
 </head>
@@ -112,13 +110,7 @@ amo.registerAttribute("frameVideo1", "TEXT", "https://ct.tubemogul.com/web/altic
           width:inherit;
           height:inherit;">
       </div> -->
-      <div id="logoImage" class="asset"
-        data-image="logoImage"
-        style="top:0px;
-          left:0px;
-          width:inherit;
-          height:inherit;">
-      </div>
+
 
       <div id="frameImage2" class="asset" data-image="frameImage2" style="top:0px;left:0px;width:inherit;height:inherit;-webkit-transition:opacity ease-out 0.3s,transform ease-out 0.3s;transition:opacity ease-out 0.3s,transform ease-out 0.3s;"></div>
       <div id="frameText21" class="frameText" style="top:0px;left:0px;width:inherit;height:inherit;-webkit-transition:opacity ease-out 0.3s,transform ease-out 0.3s;transition:opacity ease-out 0.3s,transform ease-out 0.3s;">!{frameText21}</div>
@@ -137,20 +129,11 @@ amo.registerAttribute("frameVideo1", "TEXT", "https://ct.tubemogul.com/web/altic
       <div id="frameText52" class="frameText" style="top:0px;left:0px;width:inherit;height:inherit;-webkit-transform:translateX(-100%);transform:translateX(-100%);-webkit-transition:opacity ease-out 0.3s,transform 0.3s ease-out 0.1s;transition:opacity ease-out 0.3s,transform 0.3s ease-out 0.1s;">!{frameText52}</div>
       <div id="frameText53" class="frameText" style="top:0px;left:0px;width:inherit;height:inherit;-webkit-transform:translateX(-100%);transform:translateX(-100%);-webkit-transition:opacity ease-out 0.3s,transform 0.3s ease-out 0.2s;transition:opacity ease-out 0.3s,transform 0.3s ease-out 0.2s;">!{frameText53}</div>
       <div id="priceLabel" class="asset" data-image="priceLabel" style="top:0px;left:0px;width:inherit;height:inherit;-webkit-transform:translateX(-100%);transform:translateX(-100%);-webkit-transition:opacity ease-out 0.3s,transform 0.3s ease-out 0.3s;transition:opacity ease-out 0.3s,transform 0.3s ease-out 0.3s;"></div>
-      <div id="cta" class="text AlticeBold"
-        data-text="ctaText"
-        style="top:207px;
-          left:20px;
-          width:80px;
-          height:24px;
-          font-size:12px;
-          color:#fff;">
-      </div>
       <div id="frame1" class="frame"
         style="transform-origin:bottom center;
         -webkit-transition:opacity ease-out 0.3s, transform ease-out 0.3s;
         transition:opacity ease-out 0.3s, transform ease-out 0.3s;
-        background-color:#fff;
+        background-color:#e2e3e4;
         opacity:1;">
         <div id="frameVideo1"
           style="top:0px;
@@ -159,13 +142,13 @@ amo.registerAttribute("frameVideo1", "TEXT", "https://ct.tubemogul.com/web/altic
             height:inherit;">
             <video muted playsinline autoplay style="width:100%;"></video>
         </div>
-        <div id="videoOverlay"
+        <!-- <div id="videoOverlay"
           style="top:0px;
             left:0px;
             width:inherit;
             height:inherit;
             background-color:rgba(0,0,0,0.3)">
-        </div>
+        </div> -->
         <!-- <div id="ref" class="asset"
           data-image="ref"
           style="top:0px;
@@ -179,12 +162,10 @@ amo.registerAttribute("frameVideo1", "TEXT", "https://ct.tubemogul.com/web/altic
             left:0px;
             width:inherit;
             height:inherit;
-            transform-origin: 60% 45% 0px;
-            -webkit-transform:scale(0);
-            transform:scale(0);
+            -webkit-transform: translateX(-100%);
+            transform: translateX(-100%);
             -webkit-transition:opacity ease-out 0.3s, transform cubic-bezier(.43,-0.25,.32,1.39) 0.5s;
-            transition:opacity ease-out 0.3s, transform cubic-bezier(.43,-0.25,.32,1.39) 0.5s;
-            opacity:0;">
+            transition:opacity ease-out 0.3s, transform cubic-bezier(.43,-0.25,.32,1.39) 0.5s;">
         </div> -->
         <div id="frameImage1" class="asset"
           data-image="frameImage1"
@@ -201,47 +182,52 @@ amo.registerAttribute("frameVideo1", "TEXT", "https://ct.tubemogul.com/web/altic
         </div>
         <!-- <div id="frameText1" class="text AlticeBold"
           data-text="frameText1"
-          data-style="text-align:center;"
-          style="top:46px;
-            left:10px;
-            width:280px;
-            height:150px;
-            font-size:30px;
-            line-height:1;
+          style="top:366px;
+            left:20px;
+            width:260px;
+            height:120px;
+            font-size:32px;
+            line-height:1.1;
+            letter-spacing:0px;
             font-weight: bold;
-            color:#fff;
-            opacity:0;">
+            color:#0084d6;
+            opacity:0;
+            -webkit-transition:transform ease-out 1.2s;
+            transition:transform ease-out 1.2s;">
         </div> -->
-        <!-- <div id="frameText12" class="text AlticeBold"
+        <!-- <div id="frameText12" class="text-top-left AlticeBold"
           data-text="frameText12"
-          data-style="text-align:center;"
-          style="top:75px;
-            left:10px;
-            width:280px;
-            height:100px;
-            font-size:24px;
-            line-height:1;
-            font-weight: bold;
-            color:#fff;
+          style="top:383px;
+            left:20px;
+            width:260px;
+            height:150px;
+            font-size:32px;
+            line-height:1.1;
             opacity:0;">
         </div> -->
-        <div id="introLogoImage" class="asset"
+        <!-- <div id="introLogoImage" class="asset"
           data-image="introLogoImage"
           style="top:0px;
             left:0px;
             width:inherit;
             height:inherit;">
-        </div>
-        <div id="introCta" class="text AlticeBold"
-          data-text="ctaText"
-          style="top:206px;
-            left:19px;
-            width:80px;
-            height:22px;
-            font-size:12px;
-            color:#fff;
-            border:1px solid;">
-        </div>
+        </div> -->
+      </div>
+      <div id="logoImage" class="asset"
+        data-image="logoImage"
+        style="top:0px;
+          left:0px;
+          width:inherit;
+          height:inherit;">
+      </div>
+      <div id="cta" class="text AlticeBold"
+        data-text="ctaText"
+        style="top:539px;
+          left:20px;
+          width:101px;
+          height:31px;
+          font-size:15px;
+          color:#fff;">
       </div>
       <div id="overlay" style="top:0px;left:0px;width:inherit;height:inherit;background-color:#fff;opacity:1;-webkit-transition:all 0.5s ease 1s;transition:all 0.5s ease 1s;"></div>
     </div>
@@ -250,11 +236,10 @@ amo.registerAttribute("frameVideo1", "TEXT", "https://ct.tubemogul.com/web/altic
       <div class="AlticeBold" style="color:transparent;">AlticeBold</div>
     </div>
     <script type="text/javascript">
-      var extraFrameFlag = false;
       var ad = new Ad({
         root: document.querySelector('#ad'),
         width: 300,
-        height: 250,
+        height: 600,
         borderWidth: 1,
         borderColor: '#000'
       });
@@ -263,17 +248,21 @@ amo.registerAttribute("frameVideo1", "TEXT", "https://ct.tubemogul.com/web/altic
           cam: {},
           feed: [],
           staticData: {
-            logoImage: 'images/300x250_Logo_Suddenlink.png',
-            introLogoImage: 'images/300x250_Logo_Suddenlink_White.png',
-            priceLabel: '300x250_OPT_AugPFL_ACQ_AO_Amz_64PFL_NonSub_NY_Img_Frame05.png',
+            logoImage: 'images/300x600_Logo_Suddenlink.png',
+            // introLogoImage: 'images/300x600_Logo_Suddenlink.png',
+            priceLabel: '300x600_OPT_AugPFL_ACQ_AO_Amz_64PFL_NonSub_NY_Img_Frame05.png',
             // starImage: 'images/star.svg',
             ctaBtn: '#0084d6',
             ctaBtnHover: '#005990',
-            // ref: 'ref5.jpg',
+            // ref: 'ref2.jpg',
           },
           beforeLoad: function(data){
             data.map(function(content){
-
+              // if(content.frameText12 && content.frameText12.indexOf('|') != -1) {
+              //   content.frameText11 = content.frameText12.split('|')[0];
+              //   content.frameText13 = content.frameText12.split('|')[2];
+              //   content.frameText12 = content.frameText12.split('|')[1];
+              // }
             });
             return data;
           }
@@ -282,33 +271,8 @@ amo.registerAttribute("frameVideo1", "TEXT", "https://ct.tubemogul.com/web/altic
           ad.root.addEventListener("click", function(e) {
             if('button' in e.target.dataset) { } else { amo.onAdClick('clickUrl'); } //amo.onDynAdClick(adData.feedData, "CLICK", adClickUrl); }
           });
-          extraFrameFlag = false;
           setTimeout(function(){ ad.layers.frameVideo1.querySelector('video').src = adData.frameVideo1; },800);
-          var playOtherFrames = function(){};
-                      (function(){
-                      ad.layers.cta.style.opacity = 1;
-                      if('frame1' in ad.layers) ad.layers.frame1.remove();
-                      ad.layers.frameImage2.style.opacity = 0;
-                      ad.layers.frameText21.style.opacity = 0;
-                      ad.layers.frameText22.style.opacity = 0;
-                      ad.layers.frameText23.style.opacity = 0;
-                      setTimeout(function(){
-                        ad.layers.frameImage5.style.webkitTransform = '';
-                        ad.layers.frameImage5.style.transform = '';
-                        ad.layers.frameText51.style.webkitTransform = '';
-                        ad.layers.frameText51.style.transform = '';
-                        ad.layers.frameText52.style.webkitTransform = '';
-                        ad.layers.frameText52.style.transform = '';
-                        ad.layers.frameText53.style.webkitTransform = '';
-                        ad.layers.frameText53.style.transform = '';
-                        
-                          if('priceLabel' in ad.layers) {
-                            ad.layers.priceLabel.style.webkitTransform = '';
-                            ad.layers.priceLabel.style.transform = '';
-                          }
-                          
-                      },1000);}())
-                    var playOtherFrames1 = function(){
+          var playOtherFrames = function(){
             setTimeout(function(){
               ad.layers.frame1.style.webkitTransform = 'rotate(30deg) translate(50%,-50%)';
               ad.layers.frame1.style.transform = 'rotate(30deg) translate(50%,-50%)';
@@ -381,7 +345,6 @@ amo.registerAttribute("frameVideo1", "TEXT", "https://ct.tubemogul.com/web/altic
                 playOtherFrames();
             },500);
           }
-          // playOtherFrames();
         });
       }, 2000);
     </script>
