--- a/A/Altice/AlticeAugustCreative/ads/P3_SDL_2P_79_Non-AO/300x600/300x600_frame5.html
+++ b/A/Altice/AlticeAugustCreative/ads/P3_SDL_2P_79_Non-AO/300x600/300x600_frame5.html
@@ -22,7 +22,7 @@
     </style>
     <style media="screen" data-dynamic="style">
       #ad {
-        width: 160px;
+        width: 300px;
         height: 600px;
         font-family: Arial,Helvetica,sans-serif;
         color: #000;
@@ -47,22 +47,22 @@
       .verticalBar {
         position: absolute;
         top:0px;
-        width: 5px;
-        height: 48px;
+        width: 10px;
+        height: 56px;
         background-color: #fff;
         transform-origin: top center;
       }
       .star {
         position: absolute;
         top: 0px;
-        width: 12px;
-        height: 12px;
+        width: 20px;
+        height: 20px;
       }
       .star-container {
         position: absolute;
-        top: 51px;
-        width: 12px;
-        height: 12px;
+        top: 61px;
+        width: 20px;
+        height: 20px;
       }
       #cta { background-color: !{ctaBtn}; }
       #cta:hover { background-color: !{ctaBtnHover}; }
@@ -71,24 +71,24 @@
 <script type="text/javascript">
 amo.registerClick("clickUrl","https://www.Optimum.com?s_cid=JuneAO64-_-d&bsp=&utm_source=programmatic&utm_medium=display&utm_campaign=acqbanner");
 amo.registerAttribute("ctaText","TEXT","Learn more");
-amo.registerAttribute("frameImage2","IMAGE","160x600_OPT_Aug_ACQ_iStart_TV&Int_49Yr1_NonSub_NY_Img_Frame02.png");
+amo.registerAttribute("frameImage2","IMAGE","300x600_OPT_Aug_ACQ_iStart_TV&Int_49Yr1_NonSub_NY_Img_Frame02.png");
 amo.registerAttribute("frameImage3","IMAGE","1x1.png");
-amo.registerAttribute("frameImage4","IMAGE","160x600_OPT_AugPFL_ACQ_AO_Amz_64PFL_NonSub_NY_Img_AmzCard100_Frame04.png");
-amo.registerAttribute("frameImage5","IMAGE","160x600_OPT_AugPFL_ACQ_AO_Amz_64PFL_NonSub_NY_Img_AmzCard100_Frame04.png");
-amo.registerAttribute("frameImage1","IMAGE","160x600_OPT_AugPFL_ACQ_AO_Amz_64PFL_NonSub_NY_Img_Frame01.png");
-amo.registerAttribute("frameText21","TEXT","<div style='top: 55px;left:15px;line-height:1.1;'><div style='font-size: 24px;letter-spacing: -0.2px;'>TV + 1 Gig<br>Internet</div></div>");
-amo.registerAttribute("frameText22","TEXT","<div style='top: 105px;left: 16px;line-height:1.1;'><div style='color: #0084d6;font-size: 62px;'><sup style='font-size: 49%;vertical-align: 63%;margin-right: -1px;'>$</sup>79<sup style='font-size: 49%;vertical-align: 67%;margin-left: 2px;'>99</sup></div><div style='font-size: 14px;letter-spacing: -0.3px;margin-top: -9px;'>mo. <font style='color:#0084d6;'>for life</font><div class='AlticeRegular' style='font-size: 10px;margin-top: 1px;letter-spacing: -0.1px;'>Plus taxes, fees &amp; charges</div></div></div>");
+amo.registerAttribute("frameImage4","IMAGE","300x600_OPT_AugPFL_ACQ_AO_Amz_64PFL_NonSub_NY_Img_AmzCard100_Frame04.png");
+amo.registerAttribute("frameImage5","IMAGE","300x600_OPT_AugPFL_ACQ_AO_Amz_64PFL_NonSub_NY_Img_AmzCard100_Frame04.png");
+amo.registerAttribute("frameImage1","IMAGE","300x600_OPT_AugPFL_ACQ_AO_Amz_64PFL_NonSub_NY_Img_Frame01.png");
+amo.registerAttribute("frameText21","TEXT","<div style='top: 59px;left:21px;line-height:1;'><div style='font-size: 30px;letter-spacing: -0.2px;'>TV + 1 Gig Internet</div></div>");
+amo.registerAttribute("frameText22","TEXT","<div style='top: 90px;left: 21px;line-height:1.1;'><div style='color: #0084d6;font-size: 69px;'><sup style='font-size: 49%;vertical-align: 63%;margin-right: -1px;'>$</sup>79<sup style='font-size: 49%;vertical-align: 67%;margin-left: 2px;'>99</sup></div><div style='font-size: 15px;letter-spacing: -0.2px;margin-top: -13px;'>mo. <font style='color:#0084d6;'>for life</font><div class='AlticeRegular' style='font-size: 11px;margin-top: 1px;letter-spacing: -0.1px;'>Plus taxes, fees &amp; charges</div></div></div>");
 amo.registerAttribute("frameText23","TEXT","&nbsp;");
-amo.registerAttribute("frameText31","TEXT","<div style='top: 48px;left: 14px;line-height: 1.6;font-size: 15px;'><div><span style='color:#0084d6;padding-right:4px;'>+</span>1 Gig Internet</div><div><span style='color:#0084d6;padding-right:4px;'>+</span>Unlimited Data</div></div>");
-amo.registerAttribute("frameText32","TEXT","<div style='top: 96px;left: 14px;line-height: 1.6;font-size: 15px;'><div><span style='color:#0084d6;padding-right:4px;'>+</span>Over 200</div><div style='margin-top: -4px;margin-left: 14px;'>Channels</div></div>");
-amo.registerAttribute("frameText33","TEXT","<div style='top: 140px;left: 14px;line-height: 1.6;font-size: 15px;'><div><span style='color:#0084d6;padding-right:4px;'>+</span>Free Installation</div></div></div>");
-amo.registerAttribute("frameText41","TEXT","<div style='top: 38px;left: 14px;line-height: 1.6;font-size: 16px;letter-spacing: -2px;'><div style='color: #0084d6;font-size: 52px;'><sup style='font-size:60%;vertical-align: 31%;margin-right: -1px;'>$</sup>100</div></div>");
-amo.registerAttribute("frameText42","TEXT","<div style='top: 103px;left: 16px;line-height: 1.1;font-size: 22px;'>Amazon.com<br>Gift Card</div>");
-amo.registerAttribute("frameText43","TEXT","<div class='AlticeRegular' style='top:154px;left: 15px;line-height: 1.2;letter-spacing: -0.3px;font-size: 10px;'>Restrictions apply, see<br>amazon.com/gc-legal</div>");
-amo.registerAttribute("frameText51","TEXT","<div style='top: 110px;left:15px;line-height:1.1;'><div style='font-size: 24px;letter-spacing: -0.2px;'>TV + 1 Gig<br>Internet</div></div>");
-amo.registerAttribute("frameText52","TEXT","<div style='top: 160px;left: 16px;line-height:1.1;'><div style='color: #0084d6;font-size: 62px;'><sup style='font-size: 49%;vertical-align: 63%;margin-right: -1px;'>$</sup>79<sup style='font-size: 49%;vertical-align: 67%;margin-left: 2px;'>99</sup></div><div style='font-size: 14px;letter-spacing: -0.3px;margin-top: -9px;'>mo. <font style='color:#0084d6;'>for life</font><div class='AlticeRegular' style='font-size: 10px;margin-top: 1px;letter-spacing: -0.1px;'>Plus taxes, fees &amp; charges</div></div></div>");
-amo.registerAttribute("frameText53","TEXT","<div style='top: 279px;left: 16px;line-height: 1.5;font-size: 14px;letter-spacing:-0.1px;'><div><span style='color:#0084d6;padding-right: 0px;'>+</span>$100 Amazon.com</div><div style='margin-top: -5px;margin-left: 9px;'>Gift Card</div><div style='color:#0084d6;'><span style='color:#0084d6;padding-right:0px;'>+</span>No Annual</div><div style='margin-top: -4px;margin-left: 9px;color: #0084d6;'>Contract</div><div style='position: absolute;top: -17px;left: -1px;width: 128px;border: 1px solid #aaabac;'></div></div>");
-amo.registerAttribute("frameVideo1", "TEXT", "https://ct.tubemogul.com/web/altice/august/160x600_79.mp4");
+amo.registerAttribute("frameText31","TEXT","<div style='top: 55px;left: 20px;line-height: 1.6;font-size: 22px;'><div><span style='color:#0084d6;padding-right:4px;'>+</span>1 Gig Internet</div><div><span style='color:#0084d6;padding-right:4px;'>+</span>Unlimited Data</div></div>");
+amo.registerAttribute("frameText32","TEXT","<div style='top: 125px;left: 20px;line-height: 1.6;font-size: 22px;'><div><span style='color:#0084d6;padding-right:4px;'>+</span>Over 200 Channels</div></div>");
+amo.registerAttribute("frameText33","TEXT","<div style='top: 160px;left: 20px;line-height: 1.6;font-size: 22px;'><div style='color:#0084d6;'><span style='color:#0084d6;padding-right:4px;'>+</span>No Annual Contract</div></div></div>");
+amo.registerAttribute("frameText41","TEXT","<div style='top: 27px;left: 17px;line-height: 1.6;font-size: 16px;letter-spacing: -2px;'><div style='color: #0084d6;font-size: 84px;'><sup style='font-size:60%;vertical-align: 31%;margin-right: -3px;'>$</sup>100</div></div>");
+amo.registerAttribute("frameText42","TEXT","<div style='top: 135px;left: 20px;line-height: 1.1;font-size: 32px;'>Amazon.com<br>Gift Card</div>");
+amo.registerAttribute("frameText43","TEXT","<div class='AlticeRegular' style='top: 212px;left: 20px;line-height: 1.2;letter-spacing: -0.25px;font-size: 9pt;'>Restrictions apply, see<br>amazon.com/gc-legal</div>");
+amo.registerAttribute("frameText51","TEXT","<div style='top: 59px;left:21px;line-height:1;'><div style='font-size: 30px;letter-spacing: -0.2px;'>TV + 1 Gig Internet</div></div>");
+amo.registerAttribute("frameText52","TEXT","<div style='top: 90px;left: 131px;line-height:1.1;'><div style='color: #0084d6;font-size: 69px;'><sup style='font-size: 49%;vertical-align: 63%;margin-right: -1px;'>$</sup>79<sup style='font-size: 49%;vertical-align: 67%;margin-left: 2px;'>99</sup></div><div style='font-size: 15px;letter-spacing: -0.2px;margin-top: -13px;'>mo. <font style='color:#0084d6;'>for life</font><div class='AlticeRegular' style='font-size: 11px;margin-top: 1px;letter-spacing: -0.1px;'>Plus taxes, fees &amp; charges</div></div></div>");
+amo.registerAttribute("frameText53","TEXT","<div style='top: 204px;left: 21px;line-height: 1.4;font-size: 18px;letter-spacing:-0.1px;'><div><span style='color:#0084d6;padding-right: 0px;'>+</span>$100 Amazon.com Gift Card</div><div style='color:#0084d6;'><span style='color:#0084d6;padding-right:0px;'>+</span>No Annual Contract</div></div>");
+amo.registerAttribute("frameVideo1", "TEXT", "https://ct.tubemogul.com/web/altice/august/300x600_79.mp4");
 </script>
 <!-- End of overrode asset attributes values -->
 </head>
@@ -128,7 +128,7 @@ amo.registerAttribute("frameVideo1", "TEXT", "https://ct.tubemogul.com/web/altic
       <div id="frameText51" class="frameText" style="top:0px;left:0px;width:inherit;height:inherit;-webkit-transform:translateX(-100%);transform:translateX(-100%);-webkit-transition:opacity ease-out 0.3s,transform 0.3s ease-out 0.0s;transition:opacity ease-out 0.3s,transform 0.3s ease-out 0.0s;">!{frameText51}</div>
       <div id="frameText52" class="frameText" style="top:0px;left:0px;width:inherit;height:inherit;-webkit-transform:translateX(-100%);transform:translateX(-100%);-webkit-transition:opacity ease-out 0.3s,transform 0.3s ease-out 0.1s;transition:opacity ease-out 0.3s,transform 0.3s ease-out 0.1s;">!{frameText52}</div>
       <div id="frameText53" class="frameText" style="top:0px;left:0px;width:inherit;height:inherit;-webkit-transform:translateX(-100%);transform:translateX(-100%);-webkit-transition:opacity ease-out 0.3s,transform 0.3s ease-out 0.2s;transition:opacity ease-out 0.3s,transform 0.3s ease-out 0.2s;">!{frameText53}</div>
-      <div id="priceLabel" class="asset" data-image="priceLabel" style="top:0px;left:0px;width:inherit;height:inherit;-webkit-transform:translateY(-100%);transform:translateY(-100%);-webkit-transition:opacity ease-out 0.3s,transform 0.3s ease-out 0.3s;transition:opacity ease-out 0.3s,transform 0.3s ease-out 0.3s;"></div>
+      <div id="priceLabel" class="asset" data-image="priceLabel" style="top:0px;left:0px;width:inherit;height:inherit;-webkit-transform:translateX(-100%);transform:translateX(-100%);-webkit-transition:opacity ease-out 0.3s,transform 0.3s ease-out 0.3s;transition:opacity ease-out 0.3s,transform 0.3s ease-out 0.3s;"></div>
       <div id="frame1" class="frame"
         style="transform-origin:bottom center;
         -webkit-transition:opacity ease-out 0.3s, transform ease-out 0.3s;
@@ -180,26 +180,28 @@ amo.registerAttribute("frameVideo1", "TEXT", "https://ct.tubemogul.com/web/altic
             transition:opacity ease-out 0.3s, transform cubic-bezier(.43,-0.25,.32,1.39) 0.5s;
             opacity:0;">
         </div>
-        <!-- <div id="frameText1" class="text-left AlticeBold"
+        <!-- <div id="frameText1" class="text AlticeBold"
           data-text="frameText1"
-          style="top:322px;
-            left:22px;
-            width:120px;
-            height:150px;
-            font-size:27px;
+          style="top:366px;
+            left:20px;
+            width:260px;
+            height:120px;
+            font-size:32px;
             line-height:1.1;
             letter-spacing:0px;
             font-weight: bold;
             color:#0084d6;
-            opacity:0;">
+            opacity:0;
+            -webkit-transition:transform ease-out 1.2s;
+            transition:transform ease-out 1.2s;">
         </div> -->
         <!-- <div id="frameText12" class="text-top-left AlticeBold"
           data-text="frameText12"
-          style="top:318px;
+          style="top:383px;
             left:20px;
-            width:120px;
-            height:180px;
-            font-size:24px;
+            width:260px;
+            height:150px;
+            font-size:32px;
             line-height:1.1;
             opacity:0;">
         </div> -->
@@ -220,11 +222,11 @@ amo.registerAttribute("frameVideo1", "TEXT", "https://ct.tubemogul.com/web/altic
       </div>
       <div id="cta" class="text AlticeBold"
         data-text="ctaText"
-        style="top:551px;
-          left:42px;
-          width:76px;
-          height:22px;
-          font-size:12px;
+        style="top:539px;
+          left:20px;
+          width:101px;
+          height:31px;
+          font-size:15px;
           color:#fff;">
       </div>
       <div id="overlay" style="top:0px;left:0px;width:inherit;height:inherit;background-color:#fff;opacity:1;-webkit-transition:all 0.5s ease 1s;transition:all 0.5s ease 1s;"></div>
@@ -236,7 +238,7 @@ amo.registerAttribute("frameVideo1", "TEXT", "https://ct.tubemogul.com/web/altic
     <script type="text/javascript">
       var ad = new Ad({
         root: document.querySelector('#ad'),
-        width: 160,
+        width: 300,
         height: 600,
         borderWidth: 1,
         borderColor: '#000'
@@ -246,9 +248,9 @@ amo.registerAttribute("frameVideo1", "TEXT", "https://ct.tubemogul.com/web/altic
           cam: {},
           feed: [],
           staticData: {
-            logoImage: 'images/160x600_Logo_Suddenlink.png',
-            // introLogoImage: 'images/160x600_Logo_Suddenlink.png',
-            priceLabel: '160x600_OPT_AugPFL_ACQ_AO_Amz_64PFL_NonSub_NY_Img_Frame05.png',
+            logoImage: 'images/300x600_Logo_Suddenlink.png',
+            // introLogoImage: 'images/300x600_Logo_Suddenlink.png',
+            priceLabel: '300x600_OPT_AugPFL_ACQ_AO_Amz_64PFL_NonSub_NY_Img_Frame05.png',
             // starImage: 'images/star.svg',
             ctaBtn: '#0084d6',
             ctaBtnHover: '#005990',
@@ -279,15 +281,20 @@ amo.registerAttribute("frameVideo1", "TEXT", "https://ct.tubemogul.com/web/altic
                       ad.layers.frameText22.style.opacity = 0;
                       ad.layers.frameText23.style.opacity = 0;
                       setTimeout(function(){
-                        ad.layers.frameImage4.style.webkitTransform = '';
-                        ad.layers.frameImage4.style.transform = '';
-                        ad.layers.frameText41.style.webkitTransform = '';
-                        ad.layers.frameText41.style.transform = '';
-                        ad.layers.frameText42.style.webkitTransform = '';
-                        ad.layers.frameText42.style.transform = '';
-                        ad.layers.frameText43.style.webkitTransform = '';
-                        ad.layers.frameText43.style.transform = '';
+                        ad.layers.frameImage5.style.webkitTransform = '';
+                        ad.layers.frameImage5.style.transform = '';
+                        ad.layers.frameText51.style.webkitTransform = '';
+                        ad.layers.frameText51.style.transform = '';
+                        ad.layers.frameText52.style.webkitTransform = '';
+                        ad.layers.frameText52.style.transform = '';
+                        ad.layers.frameText53.style.webkitTransform = '';
+                        ad.layers.frameText53.style.transform = '';
                         
+                          if('priceLabel' in ad.layers) {
+                            ad.layers.priceLabel.style.webkitTransform = '';
+                            ad.layers.priceLabel.style.transform = '';
+                          }
+                          
                       },1000);}())
                     var playOtherFrames1 = function(){
             setTimeout(function(){
