--- a/A/Altice/AlticeAugustCreative/ads/P3_SDL_2P_79_Non-AO/728x90/728x90_frame3.html
+++ b/A/Altice/AlticeAugustCreative/ads/P3_SDL_2P_79_Non-AO/728x90/728x90_frame3.html
@@ -81,7 +81,7 @@ amo.registerAttribute("frameText22","TEXT","<div style='top: 20px;left: 20px;lin
 amo.registerAttribute("frameText23","TEXT","&nbsp;");
 amo.registerAttribute("frameText31","TEXT","<div style='top: 14px;left: 19px;line-height: 1.6;font-size: 20px;'><div><span style='color:#0084d6;padding-right: 1px;'>+</span>1 Gig Internet</div></div>");
 amo.registerAttribute("frameText32","TEXT","<div style='top: 45px;left: 19px;line-height: 1.2;font-size: 20px;'><div><span style='color:#0084d6;padding-right:1px;'>+</span>Unlimited Data</div></div>");
-amo.registerAttribute("frameText33","TEXT","<div style='top: 18px;left: 282px;line-height: 1.3;font-size: 20px;'><div><span style='color:#0084d6;padding-right:1px;'>+</span>Over 200 Channels</div><div><span style='color:#0084d6;padding-right:1px;'>+</span>Free Installation</div></div>");
+amo.registerAttribute("frameText33","TEXT","<div style='top: 18px;left: 282px;line-height: 1.3;font-size: 20px;'><div><span style='color:#0084d6;padding-right:1px;'>+</span>Over 200 Channels</div><div style='color:#0084d6;'><span style='color:#0084d6;padding-right:1px;'>+</span>No Annual Contract</div></div>");
 amo.registerAttribute("frameText41","TEXT","<div style='top: 5px;left: 14px;line-height: 1.6;font-size: 16px;letter-spacing: -2px;'><div style='color: #0084d6;font-size: 52px;'><sup style='font-size:60%;vertical-align: 31%;margin-right: -1px;'>$</sup>100</div></div>");
 amo.registerAttribute("frameText42","TEXT","<div style='top: 25px;left: 123px;line-height: 1.1;font-size: 20px;'>Amazon.com Gift Card</div>");
 amo.registerAttribute("frameText43","TEXT","<div class='AlticeRegular' style='top:47px;left:123px;line-height: 1.6;letter-spacing: -0.3px;font-size: 10px;'>Restrictions apply, see amazon.com/gc-legal</div>");
@@ -267,7 +267,26 @@ amo.registerAttribute("frameVideo1", "TEXT", "https://ct.tubemogul.com/web/altic
             if('button' in e.target.dataset) { } else { amo.onAdClick('clickUrl'); } //amo.onDynAdClick(adData.feedData, "CLICK", adClickUrl); }
           });
           setTimeout(function(){ ad.layers.frameVideo1.querySelector('video').src = adData.frameVideo1; },800);
-          var playOtherFrames = function(){
+          var playOtherFrames = function(){};
+                      (function(){
+                      ad.layers.cta.style.opacity = 1;
+                      if('frame1' in ad.layers) ad.layers.frame1.remove();
+                      ad.layers.frameImage2.style.opacity = 0;
+                      ad.layers.frameText21.style.opacity = 0;
+                      ad.layers.frameText22.style.opacity = 0;
+                      ad.layers.frameText23.style.opacity = 0;
+                      setTimeout(function(){
+                        ad.layers.frameImage3.style.webkitTransform = '';
+                        ad.layers.frameImage3.style.transform = '';
+                        ad.layers.frameText31.style.webkitTransform = '';
+                        ad.layers.frameText31.style.transform = '';
+                        ad.layers.frameText32.style.webkitTransform = '';
+                        ad.layers.frameText32.style.transform = '';
+                        ad.layers.frameText33.style.webkitTransform = '';
+                        ad.layers.frameText33.style.transform = '';
+                        
+                      },1000);}())
+                    var playOtherFrames1 = function(){
             setTimeout(function(){
               ad.layers.frame1.style.webkitTransform = 'rotate(30deg) translate(50%,-50%)';
               ad.layers.frame1.style.transform = 'rotate(30deg) translate(50%,-50%)';
