--- a/A/Altice/AlticeAugustCreative/ads/MC_OPT_iSTART_49/160x600/160x600_frame4.html
+++ b/A/Altice/AlticeAugustCreative/ads/MC_OPT_iSTART_49/160x600/160x600_frame4.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" href="https://ct.tubemogul.com/web/static/css/style.min.css" />
 		<script type="text/javascript" src="https://ads.everesttech.net/ads/static/local/AMOLibrary.js"></script>
 		<script src="https://ct.tubemogul.com/web/static/js/script.min.js" charset="utf-8"></script>
-		
+
 		<script type="text/javascript">
 			var addTypingContent = function(d) {
 				if (d) {
@@ -87,7 +87,7 @@
 			#cta:hover { background-color: !{ctaBtnHover}; }
 		</style>
 	<!-- Start of overrode asset attributes values -->
-<script type="text/javascript"> 
+<script type="text/javascript">
 amo.registerClick("clickUrl","https://www.optimum.com/essential?s_cid=AugiStart49-_-d&utm_source=programmatic&utm_medium=display&utm_campaign=mcacqbanner");
 amo.registerAttribute("ctaText","TEXT","Ver más");
 amo.registerAttribute("frameImage2","IMAGE","160x600_OPT_Aug_ACQ_iStart_TV&Int_49Yr1_NonSub_NY_Img_Frame02.png");
@@ -102,7 +102,7 @@ amo.registerAttribute("frameText32","TEXT","<div style='top: 116px;left: 14px;li
 amo.registerAttribute("frameText33","TEXT","<div style='top: 230px;left: 14px;line-height: 1.6;font-size: 18px;width:140px;'><div style='color:#0084d6;'><span style='color:#0084d6;padding-right:1px;'>+</span>Sin contratos</div><div class='AlticeRegular' style='position: absolute;top:218px;left:0px;font-size: 9.5px;line-height:1.1;'>Conexión por cable.<br>Velocidades WiFi<br>pueden variar.</div></div>");
 amo.registerAttribute("frameText41","TEXT","&nbsp;");
 amo.registerAttribute("frameText42","TEXT","<div style='top: 55px;left: 14px;line-height: 1.15;'><div style='font-size: 22px;width: 135px;'>TV e<br>Internet rápido</div><div style='color: #0084d6;font-size: 60px;margin-top: -4px;letter-spacing: -5px;'><sup style='font-size:60%;vertical-align: 45%;'>$</sup>49<sup style='font-size:60%;vertical-align: 45%;margin-left: 6px;letter-spacing: -2px;'>99</sup></div><div style='font-size: 16px;letter-spacing: -0.3px;margin-top: -5px;'>mes/1 año<div class='AlticeRegular' style='font-size: 11.2px;margin-top: 3px;'>mas tarifas, imptos.<br>y cargos</div></div></div>");
-amo.registerAttribute("frameText43","TEXT","<div style='top: 246px;left: 15px;line-height: 1.3;font-size: 14px;letter-spacing: -0.3px;'><div><span style='color:#0084d6;padding-right: 2px;'>+</span>Gratis caja de<br>cable HD</div><div style='color:#0084d6;'><span style='color:#0084d6;padding-right: 2px;'>+</span>Sin contratos</div></div>");
+amo.registerAttribute("frameText43","TEXT","<div style='top: 246px;left: 15px;line-height: 1.3;font-size: 14px;letter-spacing: -0.3px;'><div><span style='color:#0084d6;padding-right: 2px;'>+</span>Gratis caja de</div><div style='margin-top: -3px;margin-left: 10px;'>cable HD</div><div style='color:#0084d6;'><span style='color:#0084d6;padding-right: 2px;'>+</span>Sin contratos</div></div>");
 amo.registerAttribute("frameVideo1","TEXT","https://ct.tubemogul.com/web/altice/august/160x600_49.mp4");
 </script>
 <!-- End of overrode asset attributes values -->
