Crocs FH Update

--- a/C/Crocs/FH19/Crocs_Lifestyle_FH19/ads/300x600(OnFigure)/300x600.html
+++ b/C/Crocs/FH19/Crocs_Lifestyle_FH19/ads/300x600(OnFigure)/300x600.html
@@ -270,6 +270,8 @@
                 case 'darkpink': content.backgroundImage = 'images/background/300x600_darkpink.png'; break;
                 case 'orange': content.backgroundImage = 'images/background/300x600_orange.png'; break;
                 case 'yellow': content.backgroundImage = 'images/background/300x600_yellow.png'; break;
+                case 'burgundy': content.backgroundImage = 'images/background/300x600_burgundy.png'; break;
+                case 'lavender': content.backgroundImage = 'images/background/300x600_lavender.png'; break;
                 default: content.backgroundImage = 'images/background/300x600_darkblue.png';
               }
               // content.ctaBtnHover = content.ctaBtnColor.split('^')[1];
