--- a/C/Crocs/FH19/Crocs_Lifestyle_FH19/ads/300x250/300x250.html
+++ b/C/Crocs/FH19/Crocs_Lifestyle_FH19/ads/300x250/300x250.html
@@ -249,6 +249,8 @@
                 case 'darkpink': content.backgroundImage = 'images/background/300x250_darkpink.png'; break;
                 case 'orange': content.backgroundImage = 'images/background/300x250_orange.png'; break;
                 case 'yellow': content.backgroundImage = 'images/background/300x250_yellow.png'; break;
+                case 'burgundy': content.backgroundImage = 'images/background/300x250_burgundy.png'; break;
+                case 'lavender': content.backgroundImage = 'images/background/300x250_lavender.png'; break;
                 default: content.backgroundImage = 'images/background/300x250_darkblue.png';
               }
               // content.ctaBtnHover = content.ctaBtnColor.split('^')[1];
