Crocs FH Update

--- a/C/Crocs/FH19/Crocs_ProductsOnly_FH19/ads/320x50/320x50.html
+++ b/C/Crocs/FH19/Crocs_ProductsOnly_FH19/ads/320x50/320x50.html
@@ -238,6 +238,8 @@
                 case 'darkpink': content.backgroundImage = 'images/background/320x50_darkpink.png'; break;
                 case 'orange': content.backgroundImage = 'images/background/320x50_orange.png'; break;
                 case 'yellow': content.backgroundImage = 'images/background/320x50_yellow.png'; break;
+                case 'burgundy': content.backgroundImage = 'images/background/320x50_burgundy.png'; break;
+                case 'lavender': content.backgroundImage = 'images/background/320x50_lavender.png'; break;
                 default: content.backgroundImage = 'images/background/320x50_darkblue.png';
               }
               // content.ctaBtnHover = content.ctaBtnColor.split('^')[1];
