--- a/C/Crocs/FH19/Crocs_Celebrity_FH19/ads/970x250/970x250.html
+++ b/C/Crocs/FH19/Crocs_Celebrity_FH19/ads/970x250/970x250.html
@@ -292,6 +292,8 @@
                 case 'darkpink': content.backgroundImage = 'images/background/970x250_darkpink.png'; break;
                 case 'orange': content.backgroundImage = 'images/background/970x250_orange.png'; break;
                 case 'yellow': content.backgroundImage = 'images/background/970x250_yellow.png'; break;
+                case 'burgundy': content.backgroundImage = 'images/background/970x250_burgundy.png'; break;
+                case 'lavender': content.backgroundImage = 'images/background/970x250_lavender.png'; break;
                 default: content.backgroundImage = 'images/background/970x250_darkblue.png';
               }
               // content.ctaBtnHover = content.ctaBtnColor.split('^')[1];
