--- a/C/Crocs/FH19/Crocs_ProductsOnly_FH19/ads/728x90/728x90.html
+++ b/C/Crocs/FH19/Crocs_ProductsOnly_FH19/ads/728x90/728x90.html
@@ -266,6 +266,8 @@
                 case 'darkpink': content.backgroundImage = 'images/background/728x90_darkpink.png'; break;
                 case 'orange': content.backgroundImage = 'images/background/728x90_orange.png'; break;
                 case 'yellow': content.backgroundImage = 'images/background/728x90_yellow.png'; break;
+                case 'burgundy': content.backgroundImage = 'images/background/728x90_burgundy.png'; break;
+                case 'lavender': content.backgroundImage = 'images/background/728x90_lavender.png'; break;
                 default: content.backgroundImage = 'images/background/728x90_darkblue.png';
               }
               // content.ctaBtnHover = content.ctaBtnColor.split('^')[1];
