--- a/M/Microsoft/Microsoft_Office_Evergreen_True_DCO_Template/Locaization_Tier1/ads/Template1/Ads/160x600/z160x600.html
+++ b/M/Microsoft/Microsoft_Office_Evergreen_True_DCO_Template/Locaization_Tier1/ads/Template1/Ads/160x600/z160x600.html
@@ -104,7 +104,7 @@
         var adUrl = '';
         switch(adData.layout){
           case 'COMM' : adURL = 'COMM/O365_CARTABNDMCOMM_USA_160x600_BAN_Retargeting_NA_NA_NA_ANI_BN_NA_1.htm';break;
-          case 'CON' : adURL = 'CON/O365_CARTABNDMCON_USA_160x600_BAN_Retargeting_NA_NA_NA_ANI_BN_NA_1.htm';break;
+          case 'CONSUMER' : adURL = 'CONSUMER/O365_CARTABNDMCON_USA_160x600_BAN_Retargeting_NA_NA_NA_ANI_BN_NA_1.htm';break;
           case 'Doctor' : adURL = 'Doctor/O365SMB_BKNGSDOC_USA_160x600_BAN_Bookings_English_1250_NA_ANI_CH_T1_1.htm';break;
           case 'Florist' : adURL = 'Florist/O365SMB_OCMFLO_USA_160x600_BAN_OCM_English_1250_NA_ANI_CH_T1_1.htm';break;
           case 'Hairdresser' : adURL = 'Hairdresser/O365SMB_BKNGSHD_USA_160x600_BAN_Bookings_English_1250_NA_ANI_CH_T1_1.htm';break;
