--- a/C/Crocs/FH19/Crocs_Lifestyle_FH19/ads/160x600/160x600.html
+++ b/C/Crocs/FH19/Crocs_Lifestyle_FH19/ads/160x600/160x600.html
@@ -147,11 +147,13 @@
       <div id="headlineText" class="text proximaNovaExtrabold"
         data-text="headlineText"
         data-style="text-align:center;"
-        style="top:307px;
+        style="top:305px;
+          /* top:307px; */
           left:8px;
           width:144px;
           height:40px;
-          font-size:33px;
+          /* font-size:33px; */
+          font-size:29px;
           -webkit-transition:opacity 0.5s ease-out 0.5s;
           transition:opacity 0.5s ease-out 0.5s;
           opacity:0;">
