--- a/C/Crocs/FH19/Crocs_Lifestyle_FH19/ads/970x250/970x250.html
+++ b/C/Crocs/FH19/Crocs_Lifestyle_FH19/ads/970x250/970x250.html
@@ -76,11 +76,13 @@
       <div id="headlineText" class="text proximaNovaExtrabold"
         data-text="headlineText"
         style="top:41px;
-          left:275px;
+          /* left:275px; */
+          left:276px;
           width:220px;
           height:60px;
           line-height:1.2;
-          font-size:45px;
+          /* font-size:45px; */
+          font-size:49px;
           letter-spacing:0px;
           color:#fff;
           -webkit-transition:opacity 0.5s ease-out 0.5s;
